--- a/finished_md/1.md
+++ b/finished_md/1.md
@@ -81,7 +81,7 @@ height="0.4816524496937883in"}
 ![](./media/media/image57.jpeg){width="2.7129582239720036in"
 height="2.435180446194226in"}
 
-> 图 1.4 层次设计的三个要素及其相互对应的示意图。如何相互对应。
+ 图 1.4 层次设计的三个要素及其相互对应的示意图。如何相互对应。
 
 建筑视线的起源
 
@@ -259,18 +259,18 @@ height="2.533332239720035in"}
 
 ![](./media/media/image76.jpeg){width="3.00040135608049in"
 height="4.046666666666667in"}
->
-> FIGURE 1.23 Alberti's Palazzo Rucellai (built in Florence between 1446
-> and 1451) emphasizes the height of the ground floor, while using more
-> ornate classi- cal language on upper floors to emphasize their
-> importance to the owners.
->
-> > ![](./media/media/image77.jpeg){width="2.8423851706036745in"
-> height="2.76in"}
->
-> FIGURE 1.24 Palladio's Villa Rotunda in Vicenza (built between 1566
-> and 1570) utilized both carefully proportioned spaces and rewarding
-> porticos that allowed viewers to look out onto their surroundings.
+
+ FIGURE 1.23 Alberti's Palazzo Rucellai (built in Florence between 1446
+ and 1451) emphasizes the height of the ground floor, while using more
+ ornate classi- cal language on upper floors to emphasize their
+ importance to the owners.
+
+  ![](./media/media/image77.jpeg){width="2.8423851706036745in"
+ height="2.76in"}
+
+ FIGURE 1.24 Palladio's Villa Rotunda in Vicenza (built between 1566
+ and 1570) utilized both carefully proportioned spaces and rewarding
+ porticos that allowed viewers to look out onto their surroundings.
 
 装饰改革与材料革命
 
@@ -280,27 +280,27 @@ height="4.046666666666667in"}
 
 另一个对于活动设计者有用的巴洛克建筑的方面是巴洛克城市规划。这类工作的第一项重要工程是在19世纪80年代晚期，罗马由教皇西斯都五世进行了重新规划，并在接下来的一个世纪里得到实施。轴线街道将城市中的许多重要朝圣教堂连接在一起（图1.25）。这是为了帮助朝圣者从一个地标到另一个地标的导航。大型城市广场，例如人民广场，被建造来容纳参观者。这种规划方式在后来的凡尔赛宫花园等项目中也得到了体现，并对华盛顿特区的轴线街道和基于节点的规划产生了影响。
 
-> ![](./media/media/image78.jpeg){width="3.3058398950131234in"
-> height="2.6174989063867016in"}
->
-> FIGURE 1.25 Baroque city planning utilized sight lines and planned
-> axes to link important nodes, gathering spaces, and landmarks.
+ ![](./media/media/image78.jpeg){width="3.3058398950131234in"
+ height="2.6174989063867016in"}
+
+ FIGURE 1.25 Baroque city planning utilized sight lines and planned
+ axes to link important nodes, gathering spaces, and landmarks.
 
 十八世纪的启蒙时期，欧洲的知识分子们挑战了基于信仰的观念，转而支持基于理性和科学实践的观念，这使得建筑风格重新聚焦于古典形式。正是在这个时期，新帕拉第奥主义、新古典主义以及对哥特式建筑观念的理性化蓬勃发展。工业革命从18世纪末到19世纪中叶影响了建筑风格，使得建筑师能够得以借助铁和钢的创新构建更高、更宽的面积。建筑物的材料性和建造方式也成为了当时一个颇有争议的话题。在对工业建筑的理性主义反应中，艺术与工艺运动兴起。这些艺术家和设计师主张重新关注艺术质量，而不是大量制造商品。约翰·拉斯金在他的《建筑的七盏灯》（1849年）中阐述了七盏灯或原则，用于设计伟大建筑物。其中之一是真理之灯，主张承认手工制作的结构材料，另一个是生命之灯，主张表达人类的思想和双手。拉斯金的作品对像菲利普·韦布（Philip Webb）这样的建筑师产生了巨大影响。菲利普·韦布的位于英格兰肯特贝克斯利希斯的红房子（Red House）于1859年至1860年间修建，采用了温暖的、天然的材料如砖和木材。这座建筑的设计是对住户对光线和家庭功能的需求的回应（图1.26）。这种对自然建筑材料和形式的探索将在后来的艺术与工艺建筑师以及类似安东尼奥·高第这样将哥特复兴语言与自然装饰形式相结合的艺术新潮派建筑师（图1.27）和路易斯·沙利文（Louis Sullivan）等人的作品中得以体现。
 
-> ![](./media/media/image79.jpeg){width="3.343238188976378in"
-> height="1.7666655730533682in"}
->
-> FIGURE 1.26 Philip Webb's Red House utilizes more natural materials
-> than its industrial contemporaries and focuses its design on the needs
-> of occupants.
+ ![](./media/media/image79.jpeg){width="3.343238188976378in"
+ height="1.7666655730533682in"}
+
+ FIGURE 1.26 Philip Webb's Red House utilizes more natural materials
+ than its industrial contemporaries and focuses its design on the needs
+ of occupants.
 
 ![](./media/media/image80.jpeg){width="2.9186253280839893in"
 height="2.046666666666667in"}
 
-> FIGURE 1.27 Antonio Gaudi's Church of the Sagrada Familia in
-> Barcelona, Spain, begun in 1882 and still ongoing, utilizes
-> naturalistic forms expressed in a Gothic style.
+ FIGURE 1.27 Antonio Gaudi's Church of the Sagrada Familia in
+ Barcelona, Spain, begun in 1882 and still ongoing, utilizes
+ naturalistic forms expressed in a Gothic style.
 
 在宗教改革之后的几个世纪里，各种观念发生了碰撞，并作为装饰围绕用户体验的城市重心调整，以及最终引领到自然材料的工业创新的新秩序-在二十世纪以各种现代主义建筑的形式达到了顶峰。这一运动的建筑师们，包括本书中稍后讨论的许多人，将建筑作为对人类社会的一种干预手段。他们的作品会以一种不容忽视的方式影响居住者的行为，而游戏关卡设计师们应该致力于创建迎合游戏玩家和机制之间关系的游戏空间。
 
@@ -452,7 +452,7 @@ height="2.046666666666667in"}
 
 11. Bloom, Allan David 和 Plato. *The Republic of Plato*. 第二版。纽约：基础图书，1991年。
 
-> 11a. Ruskin, John. *The Seven Lamps of Architecture*（多佛出版社版本）。纽约：多佛出版社，1989年。
+ 11a. Ruskin, John. *The Seven Lamps of Architecture*（多佛出版社版本）。纽约：多佛出版社，1989年。
 
 12. Fazio, Michael W.，Marian Moffett 和 Lawrence Wodehouse. *A World 建筑史。第二版。波士顿：麦格劳-希尔，2008年。
 
@@ -496,5 +496,5 @@ height="2.046666666666667in"}
 
 19. Box，哈尔。《像建筑师一样思考》。奥斯汀：德克萨斯大学出版社，2007年，第13-17页。
 
->> 校对：wcyiming
->> 时间：2024/9/11 未排版
+ 校对：wcyiming
+ 时间：2024/9/11 未排版
