--- a/finished_md/6.md
+++ b/finished_md/6.md
@@ -1,16 +1,16 @@
 # 用奖励空间吸引玩家
 
-> 第六章  
->  
-> 高尔夫的最佳定义，是一场被偶然奇迹掩盖的无尽悲剧系列。  
-> ——无名氏¹  
+ 第六章  
+  
+ 高尔夫的最佳定义，是一场被偶然奇迹掩盖的无尽悲剧系列。  
+ ——无名氏¹  
 
-> 如果你所见的一切，皆远超表象？身旁之人实为战士，虚无之处暗藏异界之门？若不应存在之物骤然显现？你或置若罔闻，或顿悟世界另有玄机。或许那确是一道传送门，踏入其中，万千意料之外将扑面而来。  
-> ——宫本茂²  
+ 如果你所见的一切，皆远超表象？身旁之人实为战士，虚无之处暗藏异界之门？若不应存在之物骤然显现？你或置若罔闻，或顿悟世界另有玄机。或许那确是一道传送门，踏入其中，万千意料之外将扑面而来。  
+ ——宫本茂²  
 
-> 上述引言揭示了本章的因果内核：我们将探讨游戏中的奖励机制，以及空间设计如何强化其吸引力。前文已论及奖励的要素——它们如何用于教学，以及常需挑战作为铺垫。若挑战是游戏的戏剧性所在，奖励便是愉悦之源。  
+ 上述引言揭示了本章的因果内核：我们将探讨游戏中的奖励机制，以及空间设计如何强化其吸引力。前文已论及奖励的要素——它们如何用于教学，以及常需挑战作为铺垫。若挑战是游戏的戏剧性所在，奖励便是愉悦之源。  
 
-> 本章聚焦奖励本身的体验，尤其是其令人满足的获取过程，以及如何让玩家感知其存在。我们将剖析奖励如何塑造玩家的心理旅程，梳理游戏中的奖励类型及其对空间探索的推动作用，最终揭示奖励如何升华为目标，构筑整个游戏世界的框架。  
+ 本章聚焦奖励本身的体验，尤其是其令人满足的获取过程，以及如何让玩家感知其存在。我们将剖析奖励如何塑造玩家的心理旅程，梳理游戏中的奖励类型及其对空间探索的推动作用，最终揭示奖励如何升华为目标，构筑整个游戏世界的框架。  
 
 ### 本章学习要点  
 - **奖励的核心意义**  
@@ -20,13 +20,13 @@
 
 ## 奖励的设计目的
 
-> 初看之下，游戏奖励的目的似乎显而易见：为玩家参与游戏、达成特定目标或提升表现提供回报。然而在关卡设计中，设计师可以通过暗示奖励的存在，为玩家提供多种前进路线的选择——既可以沿着主要行动路线直行，也可以选择更长的探索路径。因此，我们可以说关卡设计中奖励的目的在于：
+ 初看之下，游戏奖励的目的似乎显而易见：为玩家参与游戏、达成特定目标或提升表现提供回报。然而在关卡设计中，设计师可以通过暗示奖励的存在，为玩家提供多种前进路线的选择——既可以沿着主要行动路线直行，也可以选择更长的探索路径。因此，我们可以说关卡设计中奖励的目的在于：
 
-> - **激励游戏内行为**
-> - **吸引玩家探索**  
-> - **激发好奇心**  
+ - **激励游戏内行为**
+ - **吸引玩家探索**  
+ - **激发好奇心**  
 
-> 这三个目标将构成本章我们看待奖励的基础，也是定义游戏空间中奖励运用的准则。在继续深入之前，让我们先进一步探讨这些目标。
+ 这三个目标将构成本章我们看待奖励的基础，也是定义游戏空间中奖励运用的准则。在继续深入之前，让我们先进一步探讨这些目标。
 
 ### 激励游戏内行为
 
@@ -60,21 +60,21 @@
 
 ## 游戏空间中的奖励类型
 
-> 既然我们已经理解了游戏关卡中奖励的目的，现在可以讨论游戏空间中可运用的奖励类型。在《游戏设计基础：规则的游戏》中，凯蒂·萨伦和埃里克·齐默尔曼描述了以下几种奖励类型：
+ 既然我们已经理解了游戏关卡中奖励的目的，现在可以讨论游戏空间中可运用的奖励类型。在《游戏设计基础：规则的游戏》中，凯蒂·萨伦和埃里克·齐默尔曼描述了以下几种奖励类型：
 
-> - **荣耀奖励**：通过克服游戏挑战或赢得游戏获得的成就感。这类奖励不一定是游戏机制的一部分。
-> - **生存奖励**：能让玩家维持角色状态的道具，如生命值、弹药、魔法值等。
-> - **准入奖励**：允许玩家进入此前无法到达区域的物品，如钥匙等一次性使用道具。也包括叙事物品(如视频日志)或游戏外信息(如概念艺术)。
-> - **能力奖励**：以某种方式扩展玩家技能的新能力，可能也会解锁新区域。
+ - **荣耀奖励**：通过克服游戏挑战或赢得游戏获得的成就感。这类奖励不一定是游戏机制的一部分。
+ - **生存奖励**：能让玩家维持角色状态的道具，如生命值、弹药、魔法值等。
+ - **准入奖励**：允许玩家进入此前无法到达区域的物品，如钥匙等一次性使用道具。也包括叙事物品(如视频日志)或游戏外信息(如概念艺术)。
+ - **能力奖励**：以某种方式扩展玩家技能的新能力，可能也会解锁新区域。
 
-> 这些奖励在通用游戏设计中描述了游戏对玩家的影响，以及如何将资源分配作为克服障碍的奖励。我们的关卡设计目标涵盖了许多这类奖励，特别是能力奖励和生存奖励。然而这些奖励大多基于物品：资源补充、钥匙、强化道具等。在关卡设计中，我们更关注这些奖励物品的空间布置；正如在讨论用奖励吸引玩家时提到的，某些类型的关卡空间或体验本身就可以成为奖励。我们将讨论以下几种奖励空间类型及其与萨伦和齐默尔曼提出的物品/机制奖励的对应关系：
+ 这些奖励在通用游戏设计中描述了游戏对玩家的影响，以及如何将资源分配作为克服障碍的奖励。我们的关卡设计目标涵盖了许多这类奖励，特别是能力奖励和生存奖励。然而这些奖励大多基于物品：资源补充、钥匙、强化道具等。在关卡设计中，我们更关注这些奖励物品的空间布置；正如在讨论用奖励吸引玩家时提到的，某些类型的关卡空间或体验本身就可以成为奖励。我们将讨论以下几种奖励空间类型及其与萨伦和齐默尔曼提出的物品/机制奖励的对应关系：
 
-> - 奖励密室  
-> - 景观奖励  
-> - 冥想空间  
-> - 叙事舞台  
+ - 奖励密室  
+ - 景观奖励  
+ - 冥想空间  
+ - 叙事舞台  
 
-> 我们将看到，这些空间处理了节奏控制、视线设计和脚本事件等问题。通过分析这些空间为何具有奖励性，我们能理解如何用它们创造有趣的关卡。
+ 我们将看到，这些空间处理了节奏控制、视线设计和脚本事件等问题。通过分析这些空间为何具有奖励性，我们能理解如何用它们创造有趣的关卡。
 
 ### 奖励密室
 
@@ -118,13 +118,13 @@
 
 ## 通过延迟获取增强奖励吸引力
 
-> 奖励空间之所以令人满足，关键在于它们总是出现在危险空间或过渡区域之后，让玩家产生"通过努力赢得奖励"的感受。这种*空间延迟*手法——暂时扣留奖励的行为——强化了奖励空间的体验效果。虽然前文探讨的危险空间已具备延迟特性，但还有其他空间类型能在暗示奖励存在的同时保持神秘感。这些延迟空间通过让玩家意识到奖励来诱发探索，并通过提供不完整信息激发好奇心。本节我们将探讨建筑师发现的几种有效实现空间延迟的布局方式。
+ 奖励空间之所以令人满足，关键在于它们总是出现在危险空间或过渡区域之后，让玩家产生"通过努力赢得奖励"的感受。这种*空间延迟*手法——暂时扣留奖励的行为——强化了奖励空间的体验效果。虽然前文探讨的危险空间已具备延迟特性，但还有其他空间类型能在暗示奖励存在的同时保持神秘感。这些延迟空间通过让玩家意识到奖励来诱发探索，并通过提供不完整信息激发好奇心。本节我们将探讨建筑师发现的几种有效实现空间延迟的布局方式。
 
 ### 禅意视窗
 
 作为影响用户/玩家空间体验的布局手法，延迟的核心在于控制玩家对奖励空间的视线或感知。第一个案例来自克里斯托弗·亚历山大《建筑模式语言》中的"禅意视窗"，他如此描述其起源：
 
-> 一位佛教僧人居住在山上的石屋中。极远处可见美丽的海景，但从房屋和通往房屋的道路上却看不见。屋前有个被厚石墙环绕的庭院，访客需穿过院门，斜穿庭院到达屋门。在庭院远端墙面上，有一条狭窄的斜向缝隙。当人穿过庭院时，总有一个瞬间其位置会与墙缝对齐，得以瞥见海景——转瞬即逝，随即进入屋内。
+ 一位佛教僧人居住在山上的石屋中。极远处可见美丽的海景，但从房屋和通往房屋的道路上却看不见。屋前有个被厚石墙环绕的庭院，访客需穿过院门，斜穿庭院到达屋门。在庭院远端墙面上，有一条狭窄的斜向缝隙。当人穿过庭院时，总有一个瞬间其位置会与墙缝对齐，得以瞥见海景——转瞬即逝，随即进入屋内。
 
 亚历山大的庭院窗故事定义了禅意视窗（图6.6），这种手法通过刻意而短暂的空间奖励体验，得名于佛教僧居的设计精髓。
 
@@ -190,35 +190,35 @@
 
 ## 目标与奖励机制
 
-> 我们已了解多种奖励空间如何激励玩家持续游戏。通过空间延迟手法延缓玩家获取奖励的过程，能显著增强奖励的吸引力。从本质上看，*延迟空间与奖励的交替出现*构成了关卡设计的核心——围绕玩家行为指标设计挑战，再通过奖励激励玩家迎接挑战。
+ 我们已了解多种奖励空间如何激励玩家持续游戏。通过空间延迟手法延缓玩家获取奖励的过程，能显著增强奖励的吸引力。从本质上看，*延迟空间与奖励的交替出现*构成了关卡设计的核心——围绕玩家行为指标设计挑战，再通过奖励激励玩家迎接挑战。
 
-> 当设计师通过展示奖励、叙事描述等方式让玩家意识到即将到来的奖励时，奖励就转化为*目标*。目标是游戏设计的关键要素：一方面存在通过赢得游戏实现的叙事目标（拯救公主、恢复银河和平等），这些目标虽与核心机制关联有限，却能为游戏行为赋予激动人心的背景；另一方面，诸如获取高分、找到解锁新区域的物品或抵达关键位置等玩法目标，可通过在关卡中的精心排布创造特定体验。本节我们将剖析游戏目标的不同维度，探索它们如何驱动玩法并维持玩家长期参与度。
+ 当设计师通过展示奖励、叙事描述等方式让玩家意识到即将到来的奖励时，奖励就转化为*目标*。目标是游戏设计的关键要素：一方面存在通过赢得游戏实现的叙事目标（拯救公主、恢复银河和平等），这些目标虽与核心机制关联有限，却能为游戏行为赋予激动人心的背景；另一方面，诸如获取高分、找到解锁新区域的物品或抵达关键位置等玩法目标，可通过在关卡中的精心排布创造特定体验。本节我们将剖析游戏目标的不同维度，探索它们如何驱动玩法并维持玩家长期参与度。
 
 ### 长期与短期目标
 
-> 根据复杂度和时长，游戏通常设置多层次目标。例如《超级马里奥兄弟》的长期目标是拯救碧姬公主，但原版32个关卡若仅以最终救公主为成功标志，将造成大量无效玩法。实际上游戏还设有消灭敌人、获取强化道具、收集金币与额外生命、通过每个独立关卡等次级目标。其机制甚至支持玩家自设目标——在华盛顿史密森尼美国艺术博物馆的"电子游戏艺术"展上，参观者就自发竞赛谁能在三分钟内通关8-1关卡。
+ 根据复杂度和时长，游戏通常设置多层次目标。例如《超级马里奥兄弟》的长期目标是拯救碧姬公主，但原版32个关卡若仅以最终救公主为成功标志，将造成大量无效玩法。实际上游戏还设有消灭敌人、获取强化道具、收集金币与额外生命、通过每个独立关卡等次级目标。其机制甚至支持玩家自设目标——在华盛顿史密森尼美国艺术博物馆的"电子游戏艺术"展上，参观者就自发竞赛谁能在三分钟内通关8-1关卡。
 
-> 超级马里奥兄弟》等游戏通过*长期目标*、*短期目标*和*玩家自定义目标*的有机结合维持玩家兴趣，展示了目标在游戏中的*可扩展性*。长期目标通常是重要叙事奖励或任务终点，需要持续努力达成；短期目标则更为即时：通关某个阶段、击败敌人、找到生命强化道具等。
+ 超级马里奥兄弟》等游戏通过*长期目标*、*短期目标*和*玩家自定义目标*的有机结合维持玩家兴趣，展示了目标在游戏中的*可扩展性*。长期目标通常是重要叙事奖励或任务终点，需要持续努力达成；短期目标则更为即时：通关某个阶段、击败敌人、找到生命强化道具等。
 
-> 采用*任务系统*（要求玩家获取物品或完成特定行动）的游戏，往往通过长短目标的组合链推动进程。《创世纪IV：圣者传奇》要求玩家通过进入八座神庙并在游戏世界中实践八种美德来达成终极目标，同时还有神器寻找和地下城探索等支线任务。掌握全部美德成为圣者是整体长期目标，而每个美德又可作为阶段性的长期目标。例如进入美德神殿需要先获得对应符文——获取符文是短期目标，掌握美德是中期目标，最终服务于掌握八美德的终极目标。
+ 采用*任务系统*（要求玩家获取物品或完成特定行动）的游戏，往往通过长短目标的组合链推动进程。《创世纪IV：圣者传奇》要求玩家通过进入八座神庙并在游戏世界中实践八种美德来达成终极目标，同时还有神器寻找和地下城探索等支线任务。掌握全部美德成为圣者是整体长期目标，而每个美德又可作为阶段性的长期目标。例如进入美德神殿需要先获得对应符文——获取符文是短期目标，掌握美德是中期目标，最终服务于掌握八美德的终极目标。
 
 ## 多段式神杖结构
 
-> 这种"收集多个关键物品推进游戏"的任务结构被广泛运用，如《超级马里奥大陆2》收集六枚金币解锁城堡，《黄金太阳》激活元素灯塔等。霍华德将其类比为"多段式神杖"叙事结构——玩家需收集魔法神杖的七个部件。首段可能通过剧情意外获得，后续部件则需通过游戏进程逐步解锁。该结构不仅用于推进游戏叙事，更能为关卡设计建立稳定的目标-奖励节奏：每个神杖部件（或水晶、金币、少女等）通常对应某个关卡（如地下城）的终极目标，而每个关卡又由谜题、敌人遭遇、障碍赛道等小型挑战串联而成。
+ 这种"收集多个关键物品推进游戏"的任务结构被广泛运用，如《超级马里奥大陆2》收集六枚金币解锁城堡，《黄金太阳》激活元素灯塔等。霍华德将其类比为"多段式神杖"叙事结构——玩家需收集魔法神杖的七个部件。首段可能通过剧情意外获得，后续部件则需通过游戏进程逐步解锁。该结构不仅用于推进游戏叙事，更能为关卡设计建立稳定的目标-奖励节奏：每个神杖部件（或水晶、金币、少女等）通常对应某个关卡（如地下城）的终极目标，而每个关卡又由谜题、敌人遭遇、障碍赛道等小型挑战串联而成。
 
 ## 奖励机制设计
 
-> 可预测的奖励发放机制能让玩家*预期*即将到来的回报，这类似于巴甫洛夫的经典条件反射原理——玩家会明确知道击败地下城后将获得物品。这种目标-奖励节奏对维持玩家参与度至关重要，它让玩家清楚何时能获得游戏回报从而保持动力。
+ 可预测的奖励发放机制能让玩家*预期*即将到来的回报，这类似于巴甫洛夫的经典条件反射原理——玩家会明确知道击败地下城后将获得物品。这种目标-奖励节奏对维持玩家参与度至关重要，它让玩家清楚何时能获得游戏回报从而保持动力。
 
-> "多段式神杖"远非唯一的奖励机制。街机游戏每关结束后固定发放奖励，通常每通过2-3个常规关卡就会出现特殊奖励关卡——若玩家在第三关中途死亡，投币续关的动力将显著增强。现代移动/社交游戏同样采用稳定奖励机制，通关获得固定点数或货币用于购买道具，形成"再来一局"的消费心理。
+ "多段式神杖"远非唯一的奖励机制。街机游戏每关结束后固定发放奖励，通常每通过2-3个常规关卡就会出现特殊奖励关卡——若玩家在第三关中途死亡，投币续关的动力将显著增强。现代移动/社交游戏同样采用稳定奖励机制，通关获得固定点数或货币用于购买道具，形成"再来一局"的消费心理。
 
-> 在关卡设计层面，稳定的奖励机制能有效激励游戏行为、促进探索并通过*一致性*培养好奇心。当玩家明确知道每经过X个地下城房间就会获得奖励时，他们会持续游戏以获取下次回报。若预期奖励未立即出现，玩家会更积极探索当前房间。这种机制甚至延伸至象征性美术资产——当确立"破坏木箱/陶罐可获得资源"的规则后，玩家会主动探索游戏空间寻找这些物品。奖励为探索行为提供核心动机，而稳定的奖励节奏则帮助玩家建立对下次回报的预期。
+ 在关卡设计层面，稳定的奖励机制能有效激励游戏行为、促进探索并通过*一致性*培养好奇心。当玩家明确知道每经过X个地下城房间就会获得奖励时，他们会持续游戏以获取下次回报。若预期奖励未立即出现，玩家会更积极探索当前房间。这种机制甚至延伸至象征性美术资产——当确立"破坏木箱/陶罐可获得资源"的规则后，玩家会主动探索游戏空间寻找这些物品。奖励为探索行为提供核心动机，而稳定的奖励节奏则帮助玩家建立对下次回报的预期。
 
 ## 本章总结
 
-> 本章我们探讨了游戏奖励作为关卡设计中的核心驱动要素。通过系统分析游戏奖励在关卡中的作用机制，揭示了其如何有效激励玩家行为、促进探索欲望并激发好奇心。我们深入研究了游戏空间中的多种奖励类型，包括：容纳奖励物品的特殊空间结构、快节奏动作中的缓冲休息区，以及推动剧情发展的叙事节点。同时剖析了通过延迟奖励获取来增强满足感的空间设计策略，以及如何通过合理编排这些空间与奖励来构建目标-奖励循环体系。我们所讨论的每个主题，都以独特的方式共同塑造着玩家在游戏体验中形成的个人化叙事。
+ 本章我们探讨了游戏奖励作为关卡设计中的核心驱动要素。通过系统分析游戏奖励在关卡中的作用机制，揭示了其如何有效激励玩家行为、促进探索欲望并激发好奇心。我们深入研究了游戏空间中的多种奖励类型，包括：容纳奖励物品的特殊空间结构、快节奏动作中的缓冲休息区，以及推动剧情发展的叙事节点。同时剖析了通过延迟奖励获取来增强满足感的空间设计策略，以及如何通过合理编排这些空间与奖励来构建目标-奖励循环体系。我们所讨论的每个主题，都以独特的方式共同塑造着玩家在游戏体验中形成的个人化叙事。
 
-> 下一章我们将进一步探索游戏空间作为叙事载体的双重属性——既包含设计师预设的叙事框架，也涵盖玩家通过交互行为创造的动态叙事。
+ 下一章我们将进一步探索游戏空间作为叙事载体的双重属性——既包含设计师预设的叙事框架，也涵盖玩家通过交互行为创造的动态叙事。
 
 ## 参考文献注释
 
