--- a/finished_md/7.md
+++ b/finished_md/7.md
@@ -1,244 +1,244 @@
 # 游戏空间叙事
 
-> 第七章  
->  
-> 如我们所见，游戏是一种强大的媒介，设计师可通过视觉传达、教学和广告式手法与玩家交流。情感在塑造关卡体验中至关重要，而空间特质——尺寸、朝向、光照和视野——能有效唤起情感。本章我们将运用这些方法，在游戏空间中讲述故事。  
+ 第七章  
+  
+ 如我们所见，游戏是一种强大的媒介，设计师可通过视觉传达、教学和广告式手法与玩家交流。情感在塑造关卡体验中至关重要，而空间特质——尺寸、朝向、光照和视野——能有效唤起情感。本章我们将运用这些方法，在游戏空间中讲述故事。  
 
-> 游戏的独特性在于其交互性，允许玩家主导自己的游戏体验。为了建立与玩家的对话，关卡设计师可善用游戏特有的机会：既通过关卡传递预设故事，也为玩家创造通过玩法书写个人故事的契机。本章我们将探讨：  
+ 游戏的独特性在于其交互性，允许玩家主导自己的游戏体验。为了建立与玩家的对话，关卡设计师可善用游戏特有的机会：既通过关卡传递预设故事，也为玩家创造通过玩法书写个人故事的契机。本章我们将探讨：  
 
-> - 游戏机制与美术如何创造叙事可能  
-> - 不同类型叙事空间的构建  
-> - 模块化资产如何用于环境叙事与情节推进  
-> - 重新审视叙事奖励如何促进探索与玩家自主叙事  
+ - 游戏机制与美术如何创造叙事可能  
+ - 不同类型叙事空间的构建  
+ - 模块化资产如何用于环境叙事与情节推进  
+ - 重新审视叙事奖励如何促进探索与玩家自主叙事  
 
 ## 表现性设计
 
-> 1607年，莫卧儿王子胡拉姆（后为沙贾汗皇帝）与波斯贵族后裔阿尔朱曼德·巴努·贝古姆订婚。五年后大婚时，胡拉姆赐予她"慕塔芝·玛哈尔"（宫廷明珠）的封号，宣称她是"当世所有女性中的至臻之选"。1631年慕塔芝因难产去世，悲痛欲绝的沙贾汗耗时两年，召集穆斯林世界的建筑师与工匠，在印度阿格拉建造了融合精确比例与《古兰经》书法装饰的陵墓。环绕的波斯式天堂花园中，繁茂植被与四道水渠象征天国四河——这便是人类史上最富感染力的建筑奇观泰姬陵（图7.1）。通过比例、装饰与景观设计，这座建筑凝固了沙贾汗心中慕塔芝的美与永恒爱意。
+ 1607年，莫卧儿王子胡拉姆（后为沙贾汗皇帝）与波斯贵族后裔阿尔朱曼德·巴努·贝古姆订婚。五年后大婚时，胡拉姆赐予她"慕塔芝·玛哈尔"（宫廷明珠）的封号，宣称她是"当世所有女性中的至臻之选"。1631年慕塔芝因难产去世，悲痛欲绝的沙贾汗耗时两年，召集穆斯林世界的建筑师与工匠，在印度阿格拉建造了融合精确比例与《古兰经》书法装饰的陵墓。环绕的波斯式天堂花园中，繁茂植被与四道水渠象征天国四河——这便是人类史上最富感染力的建筑奇观泰姬陵（图7.1）。通过比例、装饰与景观设计，这座建筑凝固了沙贾汗心中慕塔芝的美与永恒爱意。
 
 ![图7.1 泰姬陵及其花园通过装饰细节、建筑比例与景观设计，具象化了一段历史爱情与逝者的美](./media/media/image311.jpeg){width="3.0in" height="3.203333333333333in"}
 
-> 设计大师唐纳德·诺曼在《情感化设计：为什么我们会爱或恨日常物品》中则探讨了更日常的叙事载体：他收藏的三把非常规茶壶。法国艺术家雅克·卡勒曼设计的反人类茶壶（壶嘴与把手同侧），建筑师迈克尔·格拉夫斯设计的透明玻璃泡茶壶（可观察茶叶舒展），以及罗纳菲尔德"倾斜"茶壶（通过角度控制浸泡程度）（图7.2）。这些茶壶以不同维度诠释产品设计叙事——讽刺的无效性、形态转化之美、实用功能叙事。
+ 设计大师唐纳德·诺曼在《情感化设计：为什么我们会爱或恨日常物品》中则探讨了更日常的叙事载体：他收藏的三把非常规茶壶。法国艺术家雅克·卡勒曼设计的反人类茶壶（壶嘴与把手同侧），建筑师迈克尔·格拉夫斯设计的透明玻璃泡茶壶（可观察茶叶舒展），以及罗纳菲尔德"倾斜"茶壶（通过角度控制浸泡程度）（图7.2）。这些茶壶以不同维度诠释产品设计叙事——讽刺的无效性、形态转化之美、实用功能叙事。
 
 ![图7.2 唐纳德·诺曼在《情感化设计》中描述的茶壶收藏](./media/media/image312.jpeg){width="2.38in" height="1.11in"}
 
-> 正如这些更经典的设计案例——无论是建筑还是产品设计——游戏同样具备表达叙事、情感与思想的力量。早在电子游戏获得如今的表现力之前（高端图像、大容量存储介质、复杂的音效设计等），包括非数字游戏在内的各种游戏，就已经通过其机制和视觉元素体现了各种思想。纵观历史，许多游戏的创作都是为了模拟其源文化中的重要元素。例如国际象棋诞生于印度笈多帝国时期（约公元320-600年），最初被称为"恰图兰加"，意为军队的"四兵种"。而美国南部的奴隶儿童则通过音乐游戏、合作游戏和角色扮演游戏（注意不要与角色扮演类电子游戏混淆）来应对他们所处的压迫环境。
+ 正如这些更经典的设计案例——无论是建筑还是产品设计——游戏同样具备表达叙事、情感与思想的力量。早在电子游戏获得如今的表现力之前（高端图像、大容量存储介质、复杂的音效设计等），包括非数字游戏在内的各种游戏，就已经通过其机制和视觉元素体现了各种思想。纵观历史，许多游戏的创作都是为了模拟其源文化中的重要元素。例如国际象棋诞生于印度笈多帝国时期（约公元320-600年），最初被称为"恰图兰加"，意为军队的"四兵种"。而美国南部的奴隶儿童则通过音乐游戏、合作游戏和角色扮演游戏（注意不要与角色扮演类电子游戏混淆）来应对他们所处的压迫环境。
 
-> 我们一直将游戏关卡设计视为与玩家沟通的工具，并将游戏关卡描述为教学或唤起情感反应（如恐惧、兴奋或快乐）的媒介。然而，泰姬陵、唐纳德·诺曼的茶壶以及历史文化中的游戏等例子向我们表明，设计同样可以体现叙事或文化理念。
+ 我们一直将游戏关卡设计视为与玩家沟通的工具，并将游戏关卡描述为教学或唤起情感反应（如恐惧、兴奋或快乐）的媒介。然而，泰姬陵、唐纳德·诺曼的茶壶以及历史文化中的游戏等例子向我们表明，设计同样可以体现叙事或文化理念。
 
 ## 叙事设计与世界观构建
 
-> 作为关卡设计师，我们需要关注叙事发展、文化理念体现与可用游戏空间表达之间的联系。这些要素的常见表现形式是*世界观构建*——虚构世界、地理与文化的创造。对游戏开发者而言，J.R.R.托尔金的作品提供了重要范例。通过《魔戒》与《精灵宝钻》，托尔金创造了中土世界：这个丰富的奇幻世界始于独创语言体系，继而发展出政治结构与地理景观。作为牛津大学盎格鲁-撒克逊语教授，托尔金精通古英语、日耳曼语系等多种语言。他承认语言是其作品核心，因为中土世界本质上是为使用其自创语言的民族构建的居所。他所发展的文化最终影响了故事走向与中土地理格局。
+ 作为关卡设计师，我们需要关注叙事发展、文化理念体现与可用游戏空间表达之间的联系。这些要素的常见表现形式是*世界观构建*——虚构世界、地理与文化的创造。对游戏开发者而言，J.R.R.托尔金的作品提供了重要范例。通过《魔戒》与《精灵宝钻》，托尔金创造了中土世界：这个丰富的奇幻世界始于独创语言体系，继而发展出政治结构与地理景观。作为牛津大学盎格鲁-撒克逊语教授，托尔金精通古英语、日耳曼语系等多种语言。他承认语言是其作品核心，因为中土世界本质上是为使用其自创语言的民族构建的居所。他所发展的文化最终影响了故事走向与中土地理格局。
 
-> 托尔金以语言为核心的世界构建方法展示了一种创作范式，开发者同样可以选择围绕政治体系、特定故事舞台或角色背景来设计世界。中土地理正是脱胎于托尔金创造的多元文化及其相互关系。中土世界在视觉与文化层面的设计，是《魔戒》及其衍生作品成功的关键要素。通过作者详实的描述，读者得以在脑海中构建中土图景，并最终通过动画电影等媒介得以具象化。托尔金的作品对此后叙事型游戏的场景设计及虚构元素的世界构建产生了深远影响。
+ 托尔金以语言为核心的世界构建方法展示了一种创作范式，开发者同样可以选择围绕政治体系、特定故事舞台或角色背景来设计世界。中土地理正是脱胎于托尔金创造的多元文化及其相互关系。中土世界在视觉与文化层面的设计，是《魔戒》及其衍生作品成功的关键要素。通过作者详实的描述，读者得以在脑海中构建中土图景，并最终通过动画电影等媒介得以具象化。托尔金的作品对此后叙事型游戏的场景设计及虚构元素的世界构建产生了深远影响。
 
 ## 游戏中的叙事化世界构建
 
-> 现代玩家通过《龙与地下城》与《克苏鲁的呼唤》等作品熟悉角色扮演游戏，这两者分别受托尔金与恐怖小说家H.P.洛夫克拉夫特影响。这类游戏的基础组件包括角色能力记录表、骰子以及主持人的指导手册。游戏过程主要依靠主持人的事件描述与玩家反馈来推进，但正是通过这些互动演绎出宏大叙事。尽管缺乏现代电子游戏的炫目视觉效果，这些抽象化、文本导向的游戏却凭借玩家想象力与交互，持续数十年创造出让数百万人沉浸的叙事世界，其中历史进程往往直接取决于玩家在游戏中的抉择。
+ 现代玩家通过《龙与地下城》与《克苏鲁的呼唤》等作品熟悉角色扮演游戏，这两者分别受托尔金与恐怖小说家H.P.洛夫克拉夫特影响。这类游戏的基础组件包括角色能力记录表、骰子以及主持人的指导手册。游戏过程主要依靠主持人的事件描述与玩家反馈来推进，但正是通过这些互动演绎出宏大叙事。尽管缺乏现代电子游戏的炫目视觉效果，这些抽象化、文本导向的游戏却凭借玩家想象力与交互，持续数十年创造出让数百万人沉浸的叙事世界，其中历史进程往往直接取决于玩家在游戏中的抉择。
 
-> 当计算机在1970年代末普及时，角色扮演爱好者立即将其视为理想的游戏载体——机器可处理复杂运算，让玩家专注于故事体验。设计师们将《龙与地下城》模组改编为《地下城》与《阿卡拉贝斯：末日世界》等早期电子RPG，后者甚至直接引入了理查德·加里奥特本人的D&D角色"不列颠之王"。同期，《魔域》等文字冒险游戏也通过纯文本描述构建复杂世界（图7.3）。
+ 当计算机在1970年代末普及时，角色扮演爱好者立即将其视为理想的游戏载体——机器可处理复杂运算，让玩家专注于故事体验。设计师们将《龙与地下城》模组改编为《地下城》与《阿卡拉贝斯：末日世界》等早期电子RPG，后者甚至直接引入了理查德·加里奥特本人的D&D角色"不列颠之王"。同期，《魔域》等文字冒险游戏也通过纯文本描述构建复杂世界（图7.3）。
 
 ![图7.3 《魔域I》部分地图。该游戏通过方位移动指令与文本描述构建细节丰富的世界](./media/media/image313.jpeg)
 
-> 尽管早期电子RPG与冒险游戏仅采用原始图像与文字描述，但其引人入胜的叙事充分调动玩家想象力来填补空白。本书虽主要关注基于游戏机制的关卡设计，但必须强调：正如建筑、产品设计、文学与游戏设计领域的案例所示，游戏空间同样可以通过叙事表达来构思。当创建同时体现游戏机制与故事的关卡时，关键在于平衡注重玩法（ludic）的部分与叙事元素。后续章节将探讨如何通过机制设计、空间特性与资产布局实现这种平衡。
+ 尽管早期电子RPG与冒险游戏仅采用原始图像与文字描述，但其引人入胜的叙事充分调动玩家想象力来填补空白。本书虽主要关注基于游戏机制的关卡设计，但必须强调：正如建筑、产品设计、文学与游戏设计领域的案例所示，游戏空间同样可以通过叙事表达来构思。当创建同时体现游戏机制与故事的关卡时，关键在于平衡注重玩法（ludic）的部分与叙事元素。后续章节将探讨如何通过机制设计、空间特性与资产布局实现这种平衡。
 
 ## 机制与主题的博弈
 
-> 游戏通常由核心机制构建——即玩家在游戏中的基本操作行为。这种设计思维使许多游戏被归类为*动作游戏*，其定义为玩家通过特定动作对抗敌对实体或危险的游戏类型。然而游戏史充满反向设计的案例：根据既有叙事来构建游戏机制。我们可以将机制导向设计与叙事导向设计的对比理解为"机制vs主题"的辩证关系。
+ 游戏通常由核心机制构建——即玩家在游戏中的基本操作行为。这种设计思维使许多游戏被归类为*动作游戏*，其定义为玩家通过特定动作对抗敌对实体或危险的游戏类型。然而游戏史充满反向设计的案例：根据既有叙事来构建游戏机制。我们可以将机制导向设计与叙事导向设计的对比理解为"机制vs主题"的辩证关系。
 
 ### 叙事作为设计发生器
 
-> 经典案例是初代《最终幻想》的创作。1986年，坂口博信为挽救濒临破产的史克威尔公司，坦言"我不认为自己擅长制作动作游戏，但更善于讲故事"。他从叙事出发构建规则系统，使游戏空间的环境美术完美支撑史诗文学传统的叙事结构。这类似于建筑界赖特的"流水别墅"设计：以客户考夫曼讲述的度假故事为蓝本，将瀑布顶端的日光浴巨石转化为住宅壁炉基座，用悬挑结构满足宴客需求，使得建筑形式直接从叙事中生长。
+ 经典案例是初代《最终幻想》的创作。1986年，坂口博信为挽救濒临破产的史克威尔公司，坦言"我不认为自己擅长制作动作游戏，但更善于讲故事"。他从叙事出发构建规则系统，使游戏空间的环境美术完美支撑史诗文学传统的叙事结构。这类似于建筑界赖特的"流水别墅"设计：以客户考夫曼讲述的度假故事为蓝本，将瀑布顶端的日光浴巨石转化为住宅壁炉基座，用悬挑结构满足宴客需求，使得建筑形式直接从叙事中生长。
 
-> 无论是游戏设计中的"机制先行"还是"叙事先行"，抑或建筑设计中的"形式优先"与"表达优先"，本质上都是有效路径。但当二者相互支撑时会产生更强大的效果——正如坂口为故事定制机制，赖特依据客户故事设计别墅。关卡设计师应像赖特那样，在游戏机制与*主题*(视觉母题或叙事模式)之间寻求平衡，使设计既能体现既有叙事，又能表达空间的功能叙事。
+ 无论是游戏设计中的"机制先行"还是"叙事先行"，抑或建筑设计中的"形式优先"与"表达优先"，本质上都是有效路径。但当二者相互支撑时会产生更强大的效果——正如坂口为故事定制机制，赖特依据客户故事设计别墅。关卡设计师应像赖特那样，在游戏机制与*主题*(视觉母题或叙事模式)之间寻求平衡，使设计既能体现既有叙事，又能表达空间的功能叙事。
 
 ### 机制与故事叙事的平衡
 
-> 设计师首要平衡的是*嵌入式叙事*——游戏中预设的故事线。这类叙事可作为设计发生器，如《托马斯独自一人》通过角色差异化移动能力强化友谊主题(图7.4)，《刺客信条》从11世纪哈桑·萨巴赫生平出发，构建出潜行、侦查、跑酷等体现刺客工作的机制。
+ 设计师首要平衡的是*嵌入式叙事*——游戏中预设的故事线。这类叙事可作为设计发生器，如《托马斯独自一人》通过角色差异化移动能力强化友谊主题(图7.4)，《刺客信条》从11世纪哈桑·萨巴赫生平出发，构建出潜行、侦查、跑酷等体现刺客工作的机制。
 
 ![图7.4 《托马斯独自一人》以极简美术配合机制强化叙事，辅以旁白塑造角色](./media/media/image314.jpeg)
 
-> 更具力量的是那些机制与叙事体验密不可分的游戏。许多游戏通过过场动画或文本等*叙事描述符*将机制置于故事语境中，但二者往往可分离——故事仅是机制背景。院校游戏设计课常让学生互换游戏叙事元素：将硬核动作游戏改编为童话，或把儿童向游戏变成成人级恐怖故事。
+ 更具力量的是那些机制与叙事体验密不可分的游戏。许多游戏通过过场动画或文本等*叙事描述符*将机制置于故事语境中，但二者往往可分离——故事仅是机制背景。院校游戏设计课常让学生互换游戏叙事元素：将硬核动作游戏改编为童话，或把儿童向游戏变成成人级恐怖故事。
 
-> 当以机制或主题作为设计基础时，建立二者对话至关重要。设计师需要思考：游戏的核心叙事元素是什么？哪些行为能支撑叙事？这些行为如何转化为游戏机制？例如设计日式RPG中的黑客角色，不应简单套用法师/战士模板，而需构建符合黑客特质的机制：操控机器人内斗、开启电子门禁。若故事发生在太空而非中世纪，传统随机遇敌机制是否适用？这种机制与叙事的平衡艺术，正是创造和谐游戏体验的关键。
+ 当以机制或主题作为设计基础时，建立二者对话至关重要。设计师需要思考：游戏的核心叙事元素是什么？哪些行为能支撑叙事？这些行为如何转化为游戏机制？例如设计日式RPG中的黑客角色，不应简单套用法师/战士模板，而需构建符合黑客特质的机制：操控机器人内斗、开启电子门禁。若故事发生在太空而非中世纪，传统随机遇敌机制是否适用？这种机制与叙事的平衡艺术，正是创造和谐游戏体验的关键。
 
 ### 机制与玩法叙事的对比
 
-> 交互性元素催生了游戏中另一种叙事类型：*涌现式叙事*。当玩家参与游戏系统规则时，他们会创造推动游戏动作发展的独特事件序列。每位玩家的操作组合通常与其朋友或全球其他玩家的行为存在差异。本书始终将游戏视为二级设计问题——设计师虽能引导但无法完全控制用户直接行为的产品。尽管这给希望在游戏空间中创造特定体验的设计师带来了挑战，但并非不可实现。设计师仍可引导玩家产生预期情感反应，即便每位玩家的具体体验细节有所不同。建立关卡*玩法叙事*是构筑目标用户体验基础的有效方法。
+ 交互性元素催生了游戏中另一种叙事类型：*涌现式叙事*。当玩家参与游戏系统规则时，他们会创造推动游戏动作发展的独特事件序列。每位玩家的操作组合通常与其朋友或全球其他玩家的行为存在差异。本书始终将游戏视为二级设计问题——设计师虽能引导但无法完全控制用户直接行为的产品。尽管这给希望在游戏空间中创造特定体验的设计师带来了挑战，但并非不可实现。设计师仍可引导玩家产生预期情感反应，即便每位玩家的具体体验细节有所不同。建立关卡*玩法叙事*是构筑目标用户体验基础的有效方法。
 
-> 玩法叙事通过预想玩家与关卡的交互体验，应对游戏叙事中的涌现特性。若为前文所述的嵌入式叙事进行设计，其表现形式如下：
+ 玩法叙事通过预想玩家与关卡的交互体验，应对游戏叙事中的涌现特性。若为前文所述的嵌入式叙事进行设计，其表现形式如下：
 
-> 本关卡设定于马戎星球，包含敌军基地及周边贫民窟城镇。关卡从角色飞船降落的城镇广场开始，延伸至星球复杂的水利系统。玩家角色潜行通过该区域进入基地主塔。最终玩家抵达塔中部的巨型实验室，某个实验体突破收容装置引发小型头目战。战斗后的过场动画揭示游戏主要反派藏身基地，玩家必须杀向塔顶。关卡结尾玩家与主要反派交战却难以取胜，当主角们乘飞船惊险逃生并昏迷时，关卡故事告终。
+ 本关卡设定于马戎星球，包含敌军基地及周边贫民窟城镇。关卡从角色飞船降落的城镇广场开始，延伸至星球复杂的水利系统。玩家角色潜行通过该区域进入基地主塔。最终玩家抵达塔中部的巨型实验室，某个实验体突破收容装置引发小型头目战。战斗后的过场动画揭示游戏主要反派藏身基地，玩家必须杀向塔顶。关卡结尾玩家与主要反派交战却难以取胜，当主角们乘飞船惊险逃生并昏迷时，关卡故事告终。
 
-> 此类关卡概要提供若干关键信息：场景与地点的基本信息、通过动作动词（从*潜行*到*战斗*）体现的节奏推进、以及关卡本身的剧情构成。而玩法叙事在保留这些叙事元素的同时，还会包含玩家与游戏交互的理论体验信息：
+ 此类关卡概要提供若干关键信息：场景与地点的基本信息、通过动作动词（从*潜行*到*战斗*）体现的节奏推进、以及关卡本身的剧情构成。而玩法叙事在保留这些叙事元素的同时，还会包含玩家与游戏交互的理论体验信息：
 
-> 关卡以显示"马戎星球"的文字开场。玩家选择两名队友共同行动。游戏始于破败阴暗的贫民窟市集，玩家可向北朝地图目标移动，东西方向探索含道具商店的市集区域，向南返回飞船。向北行进将途经巨型湖泊，排水管从水中升起并接入垂直线条凌厉的高塔侧壁。进入水域与管道后，玩家需在昏暗迷宫中开关阀门以抵达塔内。潜入塔中可潜行击杀守卫直至触发实验室迷你头目战。此后敌人遭遇频率增加且无法潜行回避，强制进入正面战斗。抵达塔顶后，玩家将发现带奖励性观景窗的宽敞房间，在此见证关卡叙事收尾。
+ 关卡以显示"马戎星球"的文字开场。玩家选择两名队友共同行动。游戏始于破败阴暗的贫民窟市集，玩家可向北朝地图目标移动，东西方向探索含道具商店的市集区域，向南返回飞船。向北行进将途经巨型湖泊，排水管从水中升起并接入垂直线条凌厉的高塔侧壁。进入水域与管道后，玩家需在昏暗迷宫中开关阀门以抵达塔内。潜入塔中可潜行击杀守卫直至触发实验室迷你头目战。此后敌人遭遇频率增加且无法潜行回避，强制进入正面战斗。抵达塔顶后，玩家将发现带奖励性观景窗的宽敞房间，在此见证关卡叙事收尾。
 
-> 该概要并非完全聚焦叙事事件，而是从玩法角度阐述玩家的部分行为。它同时规划了这个理论关卡各阶段的机制设计，以及探索与秘密的机遇。"破败阴暗的贫民窟"和"昏暗迷宫"等表述暗示了这些区域的空间特质，指导关卡设计师如何运用光照、纹理、声景或其他环境资产。此类叙事还可进一步扩展，包含玩家在特定环节应有的情绪体验，或超越机制的感知（"玩家穿过黑暗狭窄走廊时应感到恐惧"，"从悬崖跃向下方色彩明亮的平台应是愉悦体验"等）。
+ 该概要并非完全聚焦叙事事件，而是从玩法角度阐述玩家的部分行为。它同时规划了这个理论关卡各阶段的机制设计，以及探索与秘密的机遇。"破败阴暗的贫民窟"和"昏暗迷宫"等表述暗示了这些区域的空间特质，指导关卡设计师如何运用光照、纹理、声景或其他环境资产。此类叙事还可进一步扩展，包含玩家在特定环节应有的情绪体验，或超越机制的感知（"玩家穿过黑暗狭窄走廊时应感到恐惧"，"从悬崖跃向下方色彩明亮的平台应是愉悦体验"等）。
 
-> 我们已对比了基于叙事与基于游戏机制的设计差异，探讨了该设计方法论如何适配游戏中不同类型的叙事。下一节将深入剖析用于构建这些叙事的空间类型。
->
-> ## 叙事性空间
+ 我们已对比了基于叙事与基于游戏机制的设计差异，探讨了该设计方法论如何适配游戏中不同类型的叙事。下一节将深入剖析用于构建这些叙事的空间类型。
 
-> 至此，我们探讨的游戏空间主要作为叙事载体或叙事驱动的设计产物。但关卡设计本身亦可成为叙事手段。第六章"奖励空间吸引玩家"中提到的叙事舞台——重要剧情发生的奖励空间——仅是游戏叙事空间的类型之一。设计师需掌握以下四种叙事空间类型及其如何承载不同叙事形式：
+ ## 叙事性空间
 
-> **唤起型空间**  
-> **舞台型空间**  
-> **嵌入型空间**  
-> **资源供给型空间**
+ 至此，我们探讨的游戏空间主要作为叙事载体或叙事驱动的设计产物。但关卡设计本身亦可成为叙事手段。第六章"奖励空间吸引玩家"中提到的叙事舞台——重要剧情发生的奖励空间——仅是游戏叙事空间的类型之一。设计师需掌握以下四种叙事空间类型及其如何承载不同叙事形式：
 
-> 通过这些空间类型，关卡设计师能构建极具表现力的游戏世界。
+ **唤起型空间**  
+ **舞台型空间**  
+ **嵌入型空间**  
+ **资源供给型空间**
+
+ 通过这些空间类型，关卡设计师能构建极具表现力的游戏世界。
 
 ### 唤起型空间
 
-> 美国媒体学者亨利·詹金斯在《游戏叙事建筑学》中首次定义此类空间，他以迪士尼《幽灵公馆》《回到未来》等主题景点为例，说明其通过经典影视/类型传统唤起观众记忆。同样，《爱丽丝梦游魔境》既唤起刘易斯·卡罗尔《爱丽丝梦游仙境》的经典意象，又赋予其噩梦般的扭曲诠释。唤起型空间运用熟悉元素来：  
-> - 奠定氛围基调  
-> - 确立游戏虚构设定  
-> - 传递正/负向事件  
+ 美国媒体学者亨利·詹金斯在《游戏叙事建筑学》中首次定义此类空间，他以迪士尼《幽灵公馆》《回到未来》等主题景点为例，说明其通过经典影视/类型传统唤起观众记忆。同样，《爱丽丝梦游魔境》既唤起刘易斯·卡罗尔《爱丽丝梦游仙境》的经典意象，又赋予其噩梦般的扭曲诠释。唤起型空间运用熟悉元素来：  
+ - 奠定氛围基调  
+ - 确立游戏虚构设定  
+ - 传递正/负向事件  
 
-> 正常版仙境本应是欢快而荒诞的，但《爱丽丝梦游魔境》通过扭曲经典场景（如红心女王统治的仙境），构建出黑暗叙事。《生化奇兵：无限》中，角色伊丽莎白能创造平行世界版本。当玩家从排外政府掌控的主世界跳转到反抗军控制的镜像世界时，仅通过宣传画内容切换（图7.5），就实现了从绝望枪战到《悲惨世界》式革命的氛围转变——环境语义随纹理替换由负面转为正面。
+ 正常版仙境本应是欢快而荒诞的，但《爱丽丝梦游魔境》通过扭曲经典场景（如红心女王统治的仙境），构建出黑暗叙事。《生化奇兵：无限》中，角色伊丽莎白能创造平行世界版本。当玩家从排外政府掌控的主世界跳转到反抗军控制的镜像世界时，仅通过宣传画内容切换（图7.5），就实现了从绝望枪战到《悲惨世界》式革命的氛围转变——环境语义随纹理替换由负面转为正面。
 
-> 唤起型空间的效力源于我们对**建筑语汇**（特定场所的符号化建筑语言）的认知。华盛顿大屠杀纪念馆采用欧洲火车站/贫民窟语汇（图7.6），后现代主义建筑师迈克尔·格雷夫斯则在其迪士尼团队大楼（图7.7）运用七个小矮人男像柱等元素，同时唤起迪士尼历史与古典建筑传统。
+ 唤起型空间的效力源于我们对**建筑语汇**（特定场所的符号化建筑语言）的认知。华盛顿大屠杀纪念馆采用欧洲火车站/贫民窟语汇（图7.6），后现代主义建筑师迈克尔·格雷夫斯则在其迪士尼团队大楼（图7.7）运用七个小矮人男像柱等元素，同时唤起迪士尼历史与古典建筑传统。
 
-> 建筑语汇能通过场景对比表现腐朽/堕落/时光流逝。《最后生还者》将都市景观与蔓生森林并置，构建僵尸末日二十年后的世界：安全区保留军事化都市特征，而废墟中疯长的植被则强化废弃感。
+ 建筑语汇能通过场景对比表现腐朽/堕落/时光流逝。《最后生还者》将都市景观与蔓生森林并置，构建僵尸末日二十年后的世界：安全区保留军事化都市特征，而废墟中疯长的植被则强化废弃感。
 
-> 唤起型语汇对确立故事基调、暗示过往事件至关重要。僵尸游戏中散落坦克的街道暗示曾发生激烈冲突，藤蔓覆盖的废墟表明长期遗弃。但当叙事需要更精确表达时，则需要引入下一类空间——舞台型空间。
+ 唤起型语汇对确立故事基调、暗示过往事件至关重要。僵尸游戏中散落坦克的街道暗示曾发生激烈冲突，藤蔓覆盖的废墟表明长期遗弃。但当叙事需要更精确表达时，则需要引入下一类空间——舞台型空间。
 
 ### 舞台型空间
 
-> 在第六章中，我们将叙事舞台描述为既具有吸引力又充满奖励的空间，玩家在此能感受到重要游戏事件即将发生。舞台型空间通常具有独特性和宏大尺度。当玩家接近时很容易发现它们，这些空间往往通过纪念性建筑或独特特征来吸引注意力。它们可能承载以下内容：
+ 在第六章中，我们将叙事舞台描述为既具有吸引力又充满奖励的空间，玩家在此能感受到重要游戏事件即将发生。舞台型空间通常具有独特性和宏大尺度。当玩家接近时很容易发现它们，这些空间往往通过纪念性建筑或独特特征来吸引注意力。它们可能承载以下内容：
 
-> - 高潮战斗等玩法事件
-> - 过场动画等叙事事件
-> - 角色围绕玩家活动的脚本事件
+ - 高潮战斗等玩法事件
+ - 过场动画等叙事事件
+ - 角色围绕玩家活动的脚本事件
 
-> 也可能包含预设的背景事件，如《最后生还者》开场中，玩家穿过线性城市街道时，脚本触发的僵尸末日事件在周围发生。
+ 也可能包含预设的背景事件，如《最后生还者》开场中，玩家穿过线性城市街道时，脚本触发的僵尸末日事件在周围发生。
 
-> 从许多方面来看，对实际玩法至关重要的舞台空间可以保持氛围上的模糊性。它们可能是玩家获取重要物品的场所（如《塞尔达》系列中大师之剑的基座），也可能是大型战斗的舞台。《合金装备3：食蛇者》中的Sokrovenno区域就是一个独特的舞台空间，可支持两种不同的战斗事件：玩家要么与头目角色"The End"进行狙击对决，要么遭遇精英部队"Ocelot Unit"的伏击（译者补：如果你选择在现实时间等待一周从而老死The END）。为适应这两种截然不同的战斗风格，该关卡既需要供玩家和"The End"使用狙击步枪的大规模观察点，也需要在更激烈的Ocelot战斗中提供小型掩体空间（图7.8）。
+ 从许多方面来看，对实际玩法至关重要的舞台空间可以保持氛围上的模糊性。它们可能是玩家获取重要物品的场所（如《塞尔达》系列中大师之剑的基座），也可能是大型战斗的舞台。《合金装备3：食蛇者》中的Sokrovenno区域就是一个独特的舞台空间，可支持两种不同的战斗事件：玩家要么与头目角色"The End"进行狙击对决，要么遭遇精英部队"Ocelot Unit"的伏击（译者补：如果你选择在现实时间等待一周从而老死The END）。为适应这两种截然不同的战斗风格，该关卡既需要供玩家和"The End"使用狙击步枪的大规模观察点，也需要在更激烈的Ocelot战斗中提供小型掩体空间（图7.8）。
 
-> 舞台空间不必完全包含游戏内动作，它们可以如其名称所示——就是舞台。通过这种方式，舞台空间可以像电影或戏剧的布景一样搭建，用以支持游戏中角色采取的行动。《半衰期2》利用舞台空间来讲述故事，并在整个游戏中调节紧张的动作节奏。游戏初期克莱纳博士的实验室就是一个舞台空间：非玩家角色在此漫游，与玩家和彼此互动，提供说明性对话。场景通过散落的物品和机械零件营造出忙碌感，并为特定情节事件设置了发生场所。这类舞台空间通常是玩家需要抵达的目标，因此可用作奖励或控制游戏节奏的手段。在克莱纳实验室的案例中，玩家随后被引导逃离城市，前往另一个舞台空间——黑山基地东区。
+ 舞台空间不必完全包含游戏内动作，它们可以如其名称所示——就是舞台。通过这种方式，舞台空间可以像电影或戏剧的布景一样搭建，用以支持游戏中角色采取的行动。《半衰期2》利用舞台空间来讲述故事，并在整个游戏中调节紧张的动作节奏。游戏初期克莱纳博士的实验室就是一个舞台空间：非玩家角色在此漫游，与玩家和彼此互动，提供说明性对话。场景通过散落的物品和机械零件营造出忙碌感，并为特定情节事件设置了发生场所。这类舞台空间通常是玩家需要抵达的目标，因此可用作奖励或控制游戏节奏的手段。在克莱纳实验室的案例中，玩家随后被引导逃离城市，前往另一个舞台空间——黑山基地东区。
 
-> 虽然克莱纳实验室具有舞台空间的元素，但也包含暗示玩家到达前进行的实验、甚至与前作《半衰期》相关的游戏物件。这类环境叙事将我们引向下一种叙事空间类型。
+ 虽然克莱纳实验室具有舞台空间的元素，但也包含暗示玩家到达前进行的实验、甚至与前作《半衰期》相关的游戏物件。这类环境叙事将我们引向下一种叙事空间类型。
 
 ![图7.8 《合金装备3：食蛇者》中Sokrovenno区域展示如何设计空间来呈现两种不同规模的战斗：大规模狙击对决和小规模"跑轰"动作](media/media/image318.jpeg)
 
 ### 嵌入式空间
 
-> 游戏中除了存在构成主要叙事弧的预设故事和场景（嵌入式叙事）之外，还存在*嵌入式叙事空间*，即在建筑结构本身包含叙事信息的空间。将叙事嵌入建筑是一项古老的传统。在约翰内斯·古腾堡于15世纪50年代发明印刷机之前，书籍十分昂贵且通常为贵族所有。因此，西方国家大部分人口都是文盲。宗教官员需要找到一种方法让平民和贵族都能接触到圣经中的故事，所以他们经常规定教堂建筑要通过雕塑、马赛克和彩色玻璃窗将圣经故事嵌入其中。同样地，古希腊神庙通常在其立面的山墙上包含浮雕装饰（图7.9）。伊斯兰建筑在许多重要结构中运用书法艺术，比如泰姬陵和耶路撒冷的圆顶清真寺。圆顶清真寺本身就是一个嵌入式叙事空间，因为它环绕着摩利亚山——据信这是亚伯拉罕献祭以撒的地方，所罗门圣殿的建造地点，也是穆罕默德夜行登霄的所在。
+ 游戏中除了存在构成主要叙事弧的预设故事和场景（嵌入式叙事）之外，还存在*嵌入式叙事空间*，即在建筑结构本身包含叙事信息的空间。将叙事嵌入建筑是一项古老的传统。在约翰内斯·古腾堡于15世纪50年代发明印刷机之前，书籍十分昂贵且通常为贵族所有。因此，西方国家大部分人口都是文盲。宗教官员需要找到一种方法让平民和贵族都能接触到圣经中的故事，所以他们经常规定教堂建筑要通过雕塑、马赛克和彩色玻璃窗将圣经故事嵌入其中。同样地，古希腊神庙通常在其立面的山墙上包含浮雕装饰（图7.9）。伊斯兰建筑在许多重要结构中运用书法艺术，比如泰姬陵和耶路撒冷的圆顶清真寺。圆顶清真寺本身就是一个嵌入式叙事空间，因为它环绕着摩利亚山——据信这是亚伯拉罕献祭以撒的地方，所罗门圣殿的建造地点，也是穆罕默德夜行登霄的所在。
 
 ![图7.9 宗教建筑中的叙事嵌入是延续千年的建筑传统，这很大程度上是为了让不识字的信众理解宗教故事](media/media/image319.jpeg)
 
-> 嵌入式叙事空间可以通过环境美术来创建，留下角色使用过的痕迹或先前在空间中发生过的事件的证据。《传送门》和《求生之路》分别在侧室和安全屋中运用了嵌入式叙事。在《传送门》中，一个被称为"鼠人"的角色隐藏在测试室外面，留下使用过的食物容器和杂乱的涂鸦供玩家发现。这些微妙的叙事暗示塑造了一个完全看不见的角色，并预示了主线叙事中的许多事件。《求生之路》的玩家可以看到先前经过安全屋的幸存者留下的文字，这些文字提供了关于僵尸瘟疫的信息，确立了疫情的范围，并塑造了其他未见过的角色。
+ 嵌入式叙事空间可以通过环境美术来创建，留下角色使用过的痕迹或先前在空间中发生过的事件的证据。《传送门》和《求生之路》分别在侧室和安全屋中运用了嵌入式叙事。在《传送门》中，一个被称为"鼠人"的角色隐藏在测试室外面，留下使用过的食物容器和杂乱的涂鸦供玩家发现。这些微妙的叙事暗示塑造了一个完全看不见的角色，并预示了主线叙事中的许多事件。《求生之路》的玩家可以看到先前经过安全屋的幸存者留下的文字，这些文字提供了关于僵尸瘟疫的信息，确立了疫情的范围，并塑造了其他未见过的角色。
 
-> 游戏设计师决定这些叙事空间的类型及其包含的信息。然而我们已经明确，游戏中不仅存在嵌入式叙事，还有涌现式叙事。下一种叙事空间将帮助玩家利用在游戏中创造自己故事的潜力。
+ 游戏设计师决定这些叙事空间的类型及其包含的信息。然而我们已经明确，游戏中不仅存在嵌入式叙事，还有涌现式叙事。下一种叙事空间将帮助玩家利用在游戏中创造自己故事的潜力。
 
 ### 资源供给型空间
 
-> 先前的叙事空间案例展示了如何通过环境美术、空间特质或作为角色对话的容器来体现叙事语境。然而如果不放在交互式叙事的背景下使用，这些例子可能会显得被动。正如本书通篇所讨论的，建筑和游戏空间的优势在于交互性——用户的互动赋予它们意义。在原创造者逝去很久之后，建筑物常常会被赋予新的用途。例如，位于伊斯坦布尔的圣索菲亚大教堂建于532至537年间，被认为是世界上最美丽的建筑之一，几个世纪以来经历了多次功能转变（图7.10）。圣索菲亚大教堂最初是作为拜占庭基督教堂建造的，但在1453年奥斯曼土耳其征服君士坦丁堡后被改为清真寺，内部图像改为符合伊斯兰传统。自1935年起，它成为博物馆，展示该建筑历史的文物和艺术品。这座建筑作为重要的文化和历史地标，随着城市统治者的更迭不断调整用途，甚至出现在《007之俄罗斯之恋》等电影中。其他建筑适应性改造的案例可见于城市重建项目和社区改造工程，将原本用于某种用途的建筑改作他用。
+ 先前的叙事空间案例展示了如何通过环境美术、空间特质或作为角色对话的容器来体现叙事语境。然而如果不放在交互式叙事的背景下使用，这些例子可能会显得被动。正如本书通篇所讨论的，建筑和游戏空间的优势在于交互性——用户的互动赋予它们意义。在原创造者逝去很久之后，建筑物常常会被赋予新的用途。例如，位于伊斯坦布尔的圣索菲亚大教堂建于532至537年间，被认为是世界上最美丽的建筑之一，几个世纪以来经历了多次功能转变（图7.10）。圣索菲亚大教堂最初是作为拜占庭基督教堂建造的，但在1453年奥斯曼土耳其征服君士坦丁堡后被改为清真寺，内部图像改为符合伊斯兰传统。自1935年起，它成为博物馆，展示该建筑历史的文物和艺术品。这座建筑作为重要的文化和历史地标，随着城市统治者的更迭不断调整用途，甚至出现在《007之俄罗斯之恋》等电影中。其他建筑适应性改造的案例可见于城市重建项目和社区改造工程，将原本用于某种用途的建筑改作他用。
 
 ![图7.10 圣索菲亚大教堂内景（建筑师：安提米乌斯与伊西多尔），其建筑成就与文化地位使其成为征服者争夺的瑰宝](media/media/image320.jpeg)
 
-> 这些例子为涌现叙事提供资源的关键要素在于它们具有某种可识别的特质，并且本身具有交互特性。圣索菲亚大教堂是一种地位象征。被改造新用途的建筑通常具有某些市场价值，比如滨水位置或靠近便利设施。在游戏中，地标和交互元素激励玩家将关卡空间用于不仅仅是移动的目的。在许多RPG和大型多人在线角色扮演游戏（MMORPG）中，城镇是结构化用户交互的重要空间。《魔兽世界》中的闪金镇等城镇通过中心位置、熟悉环境和丰富的任务互动机会，成为玩家活动的枢纽（包括积极和消极活动）。《网络创世纪》等游戏通过建立道德系统来培养玩家活动，如果玩家对其他玩家表现出敌意，就会被禁止进入某些城镇。这营造出游戏中存在不安全旅行区域的氛围。
+ 这些例子为涌现叙事提供资源的关键要素在于它们具有某种可识别的特质，并且本身具有交互特性。圣索菲亚大教堂是一种地位象征。被改造新用途的建筑通常具有某些市场价值，比如滨水位置或靠近便利设施。在游戏中，地标和交互元素激励玩家将关卡空间用于不仅仅是移动的目的。在许多RPG和大型多人在线角色扮演游戏（MMORPG）中，城镇是结构化用户交互的重要空间。《魔兽世界》中的闪金镇等城镇通过中心位置、熟悉环境和丰富的任务互动机会，成为玩家活动的枢纽（包括积极和消极活动）。《网络创世纪》等游戏通过建立道德系统来培养玩家活动，如果玩家对其他玩家表现出敌意，就会被禁止进入某些城镇。这营造出游戏中存在不安全旅行区域的氛围。
 
-> 涌现叙事空间并非MMORPG或其他允许大量玩家互动的游戏所独有。提供大量交互机会的环境，比如物理对象或其他交互式环境组件，可以创造一些非常有影响力的涌现叙事。在《半衰期2》的测试过程中，测试人员发现可以通过让藤壶敌人用舌头卷起爆炸桶，并在桶到达它们嘴边时射击来杀死它们。Valve的设计师对这个发现非常满意，将其加入到多个关卡中，为玩家提供爆炸桶、下坡道和底部的一组藤壶，并称之为"藤壶保龄球"。《塔倒升天》等多人派对格斗游戏在紧凑的竞技场中包含许多交互对象（图7.11）。使用这些对象让玩家有多种超出核心机制的方式相互对抗，创造出丰富的元游戏叙事，即使玩家早已放下游戏也会长久铭记（"老兄，还记得那次我正要射你，你却把水晶球砸我头上吗？"）。有些故事流传多年，比如《网络创世纪》测试期间Lord British的意外刺杀事件，或是《魔兽世界》中Leeroy Jenkins的鲁莽冲锋——这位玩家单枪匹马冲进需要团队才能攻打的BOSS房间，成为经典梗。
+ 涌现叙事空间并非MMORPG或其他允许大量玩家互动的游戏所独有。提供大量交互机会的环境，比如物理对象或其他交互式环境组件，可以创造一些非常有影响力的涌现叙事。在《半衰期2》的测试过程中，测试人员发现可以通过让藤壶敌人用舌头卷起爆炸桶，并在桶到达它们嘴边时射击来杀死它们。Valve的设计师对这个发现非常满意，将其加入到多个关卡中，为玩家提供爆炸桶、下坡道和底部的一组藤壶，并称之为"藤壶保龄球"。《塔倒升天》等多人派对格斗游戏在紧凑的竞技场中包含许多交互对象（图7.11）。使用这些对象让玩家有多种超出核心机制的方式相互对抗，创造出丰富的元游戏叙事，即使玩家早已放下游戏也会长久铭记（"老兄，还记得那次我正要射你，你却把水晶球砸我头上吗？"）。有些故事流传多年，比如《网络创世纪》测试期间Lord British的意外刺杀事件，或是《魔兽世界》中Leeroy Jenkins的鲁莽冲锋——这位玩家单枪匹马冲进需要团队才能攻打的BOSS房间，成为经典梗。
 
 ![图7.11 《塔倒升天》等派对格斗游戏的竞技场在有限空间内包含大量交互对象，为涌现叙事提供丰富机会](media/media/image321.jpeg)
 
-> 到目前为止，我们主要关注空间叙事的理论和规划阶段，仅简要提及模块化资产和空间质量等实际构建元素。下一节我们将讨论使用模块化资产创建叙事空间的具体方法。
+ 到目前为止，我们主要关注空间叙事的理论和规划阶段，仅简要提及模块化资产和空间质量等实际构建元素。下一节我们将讨论使用模块化资产创建叙事空间的具体方法。
 
 ## 环境美术叙事
 
-> 想象你正在玩一个游戏：你缓慢地走在黑暗的走廊里，角色脚下传来瓦砾碎裂的声音。你走进一个看似曾经是小休息室的房间。桌上有一把被遗弃的枪和半满的弹匣，周围散落着子弹，有些已经掉到地上。枪旁边是一个打翻的威士忌酒瓶。桌子旁倒下的椅子下有一道血迹，延伸至被聚光灯照亮的另一个门口（图7.12）。作为玩家，你认为这里发生了什么？接下来你想做什么？这个场景让你感觉如何？
+ 想象你正在玩一个游戏：你缓慢地走在黑暗的走廊里，角色脚下传来瓦砾碎裂的声音。你走进一个看似曾经是小休息室的房间。桌上有一把被遗弃的枪和半满的弹匣，周围散落着子弹，有些已经掉到地上。枪旁边是一个打翻的威士忌酒瓶。桌子旁倒下的椅子下有一道血迹，延伸至被聚光灯照亮的另一个门口（图7.12）。作为玩家，你认为这里发生了什么？接下来你想做什么？这个场景让你感觉如何？
 
-> ### 模块化资产叙事
+ ### 模块化资产叙事
 
-> 这个场景可能与游戏主线剧情有关，也可能无关。玩家打开血迹指向的门后可能会有所发现，也可能一无所获。但这个场景通过环境美术创造了一个微型叙事。不难想象玩家可以收集桌上的枪支弹药来补充自己的储备，或者这些资产就是游戏中通用的弹药资产。然而，这些资产的摆放和布置讲述了一个故事：某个人在匆忙装弹时遭到袭击并被暴力拖走。威士忌酒瓶提供了些许角色塑造，让人质疑这个人的能力：他是因醉酒而被拖走，还是因为遭遇的事情太过恐怖而借酒壮胆？这些物品讲述的故事没有任何文字，却有助于奠定基调、制造紧张感，并为玩家后续可能遇到的事情埋下伏笔。
+ 这个场景可能与游戏主线剧情有关，也可能无关。玩家打开血迹指向的门后可能会有所发现，也可能一无所获。但这个场景通过环境美术创造了一个微型叙事。不难想象玩家可以收集桌上的枪支弹药来补充自己的储备，或者这些资产就是游戏中通用的弹药资产。然而，这些资产的摆放和布置讲述了一个故事：某个人在匆忙装弹时遭到袭击并被暴力拖走。威士忌酒瓶提供了些许角色塑造，让人质疑这个人的能力：他是因醉酒而被拖走，还是因为遭遇的事情太过恐怖而借酒壮胆？这些物品讲述的故事没有任何文字，却有助于奠定基调、制造紧张感，并为玩家后续可能遇到的事情埋下伏笔。
 
-> 这个例子表明，模块化美术不仅是讲述环境叙事的有效工具，也是设计师与玩家沟通的媒介。正如我们在探索叙事空间时所见，嵌入游戏空间的资产可以塑造隐形角色或为游戏行动提供叙事线索。在游戏中，美术资产具有唤起情感的力量。例如，《Dead Man's Trail》的设计师通过混合摆放环境资产、拾取物品和僵尸生成器，在关卡中创造了微型叙事。当玩家搜寻物资时，他们会遇到一些看起来像是曾有不幸角色经过的区域。其中一个例子是在有徒步小径的关卡中：设计师在帐篷周围散落猎枪弹药，并在附近放置泰迪熊。僵尸生成位置让僵尸看起来像是从树林中出来——暗示了玩家正在搜刮的这个帐篷所属家庭的命运（图7.13）。
+ 这个例子表明，模块化美术不仅是讲述环境叙事的有效工具，也是设计师与玩家沟通的媒介。正如我们在探索叙事空间时所见，嵌入游戏空间的资产可以塑造隐形角色或为游戏行动提供叙事线索。在游戏中，美术资产具有唤起情感的力量。例如，《Dead Man's Trail》的设计师通过混合摆放环境资产、拾取物品和僵尸生成器，在关卡中创造了微型叙事。当玩家搜寻物资时，他们会遇到一些看起来像是曾有不幸角色经过的区域。其中一个例子是在有徒步小径的关卡中：设计师在帐篷周围散落猎枪弹药，并在附近放置泰迪熊。僵尸生成位置让僵尸看起来像是从树林中出来——暗示了玩家正在搜刮的这个帐篷所属家庭的命运（图7.13）。
 
-> ![图7.13 《Dead Man's Trail》早期版本的截图展示了如何用环境美术暗示场景中发生的事：车辆和路障的布置看起来像是一个惊恐的巴士司机试图冲破封锁线。帐篷、猎枪、玩具和僵尸生成器的并置暗示了一个不幸家庭的故事](media/media/image323.jpeg)
+ ![图7.13 《Dead Man's Trail》早期版本的截图展示了如何用环境美术暗示场景中发生的事：车辆和路障的布置看起来像是一个惊恐的巴士司机试图冲破封锁线。帐篷、猎枪、玩具和僵尸生成器的并置暗示了一个不幸家庭的故事](media/media/image323.jpeg)
 
-> ### 环境美术与电影摄影
+ ### 环境美术与电影摄影
 
-> 对比元素的并置——枪支与泰迪熊、车辆与路障等——对你所创造的场景类型有很大影响。玩家观看这些对象的方式至关重要。镜头是游戏叙事的重要考量因素，关卡设计师可以利用游戏的*电影摄影*来突出空间叙事。电影摄影是对电影技术的研究，虽然它经常被用来讨论电影中的场景构图。对游戏设计师来说，镜头与物体位置的关系可以成为一个强大的工具。
+ 对比元素的并置——枪支与泰迪熊、车辆与路障等——对你所创造的场景类型有很大影响。玩家观看这些对象的方式至关重要。镜头是游戏叙事的重要考量因素，关卡设计师可以利用游戏的*电影摄影*来突出空间叙事。电影摄影是对电影技术的研究，虽然它经常被用来讨论电影中的场景构图。对游戏设计师来说，镜头与物体位置的关系可以成为一个强大的工具。
 
-> 在讨论游戏中的镜头使用时，我们发现一个重要元素是将玩家的注意力吸引到设计师希望他们看到的环境元素上。在第一人称游戏中，这通常包括通过线条、对比色或灯光等视觉元素引导玩家视线。在2D或俯视角游戏中，电影摄影可以用来向玩家展示玩家角色可能没有意识到的东西——即将到来的怪物或与关卡剧情相关的重要物品。
+ 在讨论游戏中的镜头使用时，我们发现一个重要元素是将玩家的注意力吸引到设计师希望他们看到的环境元素上。在第一人称游戏中，这通常包括通过线条、对比色或灯光等视觉元素引导玩家视线。在2D或俯视角游戏中，电影摄影可以用来向玩家展示玩家角色可能没有意识到的东西——即将到来的怪物或与关卡剧情相关的重要物品。
 
-> 现代电影摄影叙事技术的创新者是奥逊·威尔斯，他在1941年的经典电影《公民凯恩》中使用了被称为*深焦*的技术，通过将多段胶片叠加在一起，使前景和背景中的物体都保持清晰。《公民凯恩》中有两个重要场景使用深焦或类似深焦的效果来传达叙事，这些叙事本可以用对话简单交代。第一个场景是凯恩的父母正在争论是将凯恩交给一个富有的银行家抚养，还是让他在贫穷的科罗拉多小镇长大。当大人们——不想失去凯恩的父亲在房间一侧，母亲和银行家在另一侧——讨论男孩的命运时，可以看到凯恩在大人们之间的窗外雪地里玩耍（图7.14）。后一个场景是通过用同一段胶片拍摄两次来同时捕捉前景和背景的焦点，凯恩和一个同伴发现凯恩的妻子因他们讨论的"疾病"而昏迷，但前景的药瓶和勺子揭示这是一次自杀未遂（图7.15）。这样的场景展示了资产如何被布置来讲述超出场景即时行动的环境叙事。
+ 现代电影摄影叙事技术的创新者是奥逊·威尔斯，他在1941年的经典电影《公民凯恩》中使用了被称为*深焦*的技术，通过将多段胶片叠加在一起，使前景和背景中的物体都保持清晰。《公民凯恩》中有两个重要场景使用深焦或类似深焦的效果来传达叙事，这些叙事本可以用对话简单交代。第一个场景是凯恩的父母正在争论是将凯恩交给一个富有的银行家抚养，还是让他在贫穷的科罗拉多小镇长大。当大人们——不想失去凯恩的父亲在房间一侧，母亲和银行家在另一侧——讨论男孩的命运时，可以看到凯恩在大人们之间的窗外雪地里玩耍（图7.14）。后一个场景是通过用同一段胶片拍摄两次来同时捕捉前景和背景的焦点，凯恩和一个同伴发现凯恩的妻子因他们讨论的"疾病"而昏迷，但前景的药瓶和勺子揭示这是一次自杀未遂（图7.15）。这样的场景展示了资产如何被布置来讲述超出场景即时行动的环境叙事。
 
-> ![图7.14 《公民凯恩》早期的一个场景将争论的双方置于画面两侧，而争论的对象——年轻的查尔斯·福斯特·凯恩——通过双方之间的窗户被看到](media/media/image324.jpeg)
+ ![图7.14 《公民凯恩》早期的一个场景将争论的双方置于画面两侧，而争论的对象——年轻的查尔斯·福斯特·凯恩——通过双方之间的窗户被看到](media/media/image324.jpeg)
 
-> ![图7.15 电影后段的一个场景中，角色们发现凯恩的妻子不省人事，而场景通过药瓶的精心布置向观众揭示她曾试图自杀](media/media/image325.jpeg)
+ ![图7.15 电影后段的一个场景中，角色们发现凯恩的妻子不省人事，而场景通过药瓶的精心布置向观众揭示她曾试图自杀](media/media/image325.jpeg)
 
-> 虽然不是所有游戏都能达到《公民凯恩》那种微妙的环境叙事水平，但有些游戏利用前景、背景甚至游戏中的动作元素来提醒玩家注意各种叙事元素。在《另一个世界》中，游戏的横版卷轴视角被当作电影化体验中的多个镜头角度之一。游戏早期，可以看到一只大型怪物在多个屏幕的背景中跟踪玩家。"侧面"镜头被用来展示玩家角色的外星盟友（昵称Buddy）在被分开后在其它走廊躲避追捕者的情景（图7.16）。《刺猬索尼克3与纳克鲁斯》中Launch Base Zone的第二幕通过将超级武器"死亡之蛋"放在关卡背景中并在关卡结束时发射，描绘了蛋头博士超级武器的发射。在某种程度上，游戏也将这次发射作为对完成关卡的玩家的奖励景观，并让他们在Boss战前的游戏间歇观看这一高潮发射。即使对于没有固定镜头的游戏，如第一或第三人称3D游戏，玩家到达嵌入式环境物品叙事的时刻以及它如何通过其他环境元素（阴影、灯光、环境对比）被突出显示也至关重要。
+ 虽然不是所有游戏都能达到《公民凯恩》那种微妙的环境叙事水平，但有些游戏利用前景、背景甚至游戏中的动作元素来提醒玩家注意各种叙事元素。在《另一个世界》中，游戏的横版卷轴视角被当作电影化体验中的多个镜头角度之一。游戏早期，可以看到一只大型怪物在多个屏幕的背景中跟踪玩家。"侧面"镜头被用来展示玩家角色的外星盟友（昵称Buddy）在被分开后在其它走廊躲避追捕者的情景（图7.16）。《刺猬索尼克3与纳克鲁斯》中Launch Base Zone的第二幕通过将超级武器"死亡之蛋"放在关卡背景中并在关卡结束时发射，描绘了蛋头博士超级武器的发射。在某种程度上，游戏也将这次发射作为对完成关卡的玩家的奖励景观，并让他们在Boss战前的游戏间歇观看这一高潮发射。即使对于没有固定镜头的游戏，如第一或第三人称3D游戏，玩家到达嵌入式环境物品叙事的时刻以及它如何通过其他环境元素（阴影、灯光、环境对比）被突出显示也至关重要。
 
-> ![图7.16 《另一个世界》利用横版镜头角度来展示与玩家分开的友好角色的遭遇](media/media/image326.jpeg)
+ ![图7.16 《另一个世界》利用横版镜头角度来展示与玩家分开的友好角色的遭遇](media/media/image326.jpeg)
 
-> 在本节中，我们探讨了如何通过布置单个环境美术元素来创造环境叙事。我们还研究了镜头位置在讲述这类故事时的影响：精心将物体放置在画面内或外，使它们除了屏幕上的游戏动作外，还能为玩家提供叙事信息。接下来，我们将看看游戏中流行的一种传统故事结构，以及环境美术如何让玩家跟踪他们在其中的进展。
->
-> ## 物质性与英雄之旅
+ 在本节中，我们探讨了如何通过布置单个环境美术元素来创造环境叙事。我们还研究了镜头位置在讲述这类故事时的影响：精心将物体放置在画面内或外，使它们除了屏幕上的游戏动作外，还能为玩家提供叙事信息。接下来，我们将看看游戏中流行的一种传统故事结构，以及环境美术如何让玩家跟踪他们在其中的进展。
 
-> 约瑟夫·坎贝尔在其著作《千面英雄》中提出了"单一神话"的概念，即世界各地英雄叙事遵循的基本模式。坎贝尔这样总结不同文化中英雄叙事的核心要素："英雄从平凡世界出发，进入超自然奇迹的领域：在那里遭遇神奇力量并取得决定性胜利：英雄从这场神秘冒险中归来，获得赐福同胞的能力。"这种结构让英雄经历某种形式的"冒险召唤"（常会先被"拒绝"），随后踏上充满考验与敌人的"征途"。接着英雄会遇到"超自然仁慈力量"（通常被称为女神），要么意识到这是他一直拥有的庇护，要么获得新的庇护与祝福。英雄必须面对"强大的邪恶力量"，既要战胜它的力量，也要克服自身心魔。最终英雄必须"获得某种恩赐（重要任务物品）并成功逃脱"，返回平凡世界，"用新获得的力量过上平静生活"（图7.17）。
+ ## 物质性与英雄之旅
 
-> ![图7.17 英雄之旅是人类历史上多种文化叙事共有的模式，也是现代电子游戏常用的叙事结构](media/media/image327.png)
+ 约瑟夫·坎贝尔在其著作《千面英雄》中提出了"单一神话"的概念，即世界各地英雄叙事遵循的基本模式。坎贝尔这样总结不同文化中英雄叙事的核心要素："英雄从平凡世界出发，进入超自然奇迹的领域：在那里遭遇神奇力量并取得决定性胜利：英雄从这场神秘冒险中归来，获得赐福同胞的能力。"这种结构让英雄经历某种形式的"冒险召唤"（常会先被"拒绝"），随后踏上充满考验与敌人的"征途"。接着英雄会遇到"超自然仁慈力量"（通常被称为女神），要么意识到这是他一直拥有的庇护，要么获得新的庇护与祝福。英雄必须面对"强大的邪恶力量"，既要战胜它的力量，也要克服自身心魔。最终英雄必须"获得某种恩赐（重要任务物品）并成功逃脱"，返回平凡世界，"用新获得的力量过上平静生活"（图7.17）。
 
-> 格兰特·希尔德布兰德在《建筑愉悦的起源》中指出，建筑可以通过空间品质和物质性来体现英雄之旅的各个阶段。他认为在许多英雄叙事中，景观通过"以某种方式缺乏支持或安抚"来向英雄发出可见的挑战。作为例证，他提到迈锡尼堡垒废墟和美国西部景观，认为它们的视觉特征本身就帮助构建了英雄叙事。希尔德布兰德认为，路易斯·康设计的菲利普斯埃克塞特学院图书馆和索尔克研究所等建筑，通过私密的"安全"学习空间与"危险"的公共过渡空间的对比，体现了英雄之旅。这些建筑中的学习空间采用舒适的木料、地毯和砖材装饰，而公共空间则使用冰冷的混凝土（图7.18）。对英雄小说的研究证实了希尔德布兰德的论断：奥德修斯的旅程从绿意盎然的伊萨卡家园到特洛伊战场，穿越爱琴海、地中海和爱奥尼亚海——水的荒漠而非沙的荒漠——最终归家；同样，弗罗多·巴金斯必须离开舒适的夏尔农庄，穿越中土世界日益荒凉的土地，最终抵达火山深处的末日山销毁邪恶的至尊魔戒。
+ ![图7.17 英雄之旅是人类历史上多种文化叙事共有的模式，也是现代电子游戏常用的叙事结构](media/media/image327.png)
 
-> ![图7.18 路易斯·康设计的菲利普斯埃克塞特学院图书馆与索尔克研究所都在私密空间使用木材、石材等自然材料，在公共空间则采用混凝土等冷硬材料](media/media/image328.jpeg)
+ 格兰特·希尔德布兰德在《建筑愉悦的起源》中指出，建筑可以通过空间品质和物质性来体现英雄之旅的各个阶段。他认为在许多英雄叙事中，景观通过"以某种方式缺乏支持或安抚"来向英雄发出可见的挑战。作为例证，他提到迈锡尼堡垒废墟和美国西部景观，认为它们的视觉特征本身就帮助构建了英雄叙事。希尔德布兰德认为，路易斯·康设计的菲利普斯埃克塞特学院图书馆和索尔克研究所等建筑，通过私密的"安全"学习空间与"危险"的公共过渡空间的对比，体现了英雄之旅。这些建筑中的学习空间采用舒适的木料、地毯和砖材装饰，而公共空间则使用冰冷的混凝土（图7.18）。对英雄小说的研究证实了希尔德布兰德的论断：奥德修斯的旅程从绿意盎然的伊萨卡家园到特洛伊战场，穿越爱琴海、地中海和爱奥尼亚海——水的荒漠而非沙的荒漠——最终归家；同样，弗罗多·巴金斯必须离开舒适的夏尔农庄，穿越中土世界日益荒凉的土地，最终抵达火山深处的末日山销毁邪恶的至尊魔戒。
 
-> 游戏常通过材质——特别是关卡表面的贴图艺术或纹理——来标示地点特性及其在英雄之旅中的位置。初代《超级马里奥兄弟》每个世界都包含微型英雄之旅：马里奥始于相对友好的关卡，伴随欢快音乐，有树木、灌木、云朵和少量沟壑；随后（并非总是）进入充满新危险的地下世界——移动空间更狭窄、敌人更具攻击性、色调更阴暗；重返地面后，面临更危险的考验——更宽的沟壑、移动平台或狭窄桥梁；最终进入库巴城堡，面对冰冷的石墙、沸腾的岩浆，与库巴展开决战。救出关卡末的俘虏后，被告知"公主在另一个城堡"，然后重新开始（图7.19）。初代《塞尔达传说》的环境也遵循类似模式：玩家始于店铺林立的森林海拉尔，穿越荒凉危险的荒野，最终进入阴暗的地牢。
+ ![图7.18 路易斯·康设计的菲利普斯埃克塞特学院图书馆与索尔克研究所都在私密空间使用木材、石材等自然材料，在公共空间则采用混凝土等冷硬材料](media/media/image328.jpeg)
 
-> ![图7.19 初代《超级马里奥兄弟》每个世界都包含微型英雄之旅：1)始于友好景观；2)进入与舒适隔绝的阴暗地底；3)重返地面接受环境考验；4)高潮战斗解救俘虏](media/media/image329.jpeg)
+ 游戏常通过材质——特别是关卡表面的贴图艺术或纹理——来标示地点特性及其在英雄之旅中的位置。初代《超级马里奥兄弟》每个世界都包含微型英雄之旅：马里奥始于相对友好的关卡，伴随欢快音乐，有树木、灌木、云朵和少量沟壑；随后（并非总是）进入充满新危险的地下世界——移动空间更狭窄、敌人更具攻击性、色调更阴暗；重返地面后，面临更危险的考验——更宽的沟壑、移动平台或狭窄桥梁；最终进入库巴城堡，面对冰冷的石墙、沸腾的岩浆，与库巴展开决战。救出关卡末的俘虏后，被告知"公主在另一个城堡"，然后重新开始（图7.19）。初代《塞尔达传说》的环境也遵循类似模式：玩家始于店铺林立的森林海拉尔，穿越荒凉危险的荒野，最终进入阴暗的地牢。
 
-> 在设计类似模式时，可运用不同贴图集和颜色（漫反射）贴图创造所需环境效果。安全或温馨场所应采用自然或丰富材质：草地、木材、砖块、石材等赖特式材料。随着英雄推进任务，逐渐使用更冷硬或战损材质：粗凿巨石、机械、外星科技、铁器、岩浆、酸液等（图7.20）。现代游戏流行使用"脏旧"纹理——通过污损表现磨损的贴图。脏旧纹理适合展示曾经安全区域的腐蚀堕落，与整洁温馨的安全区形成对比。
+ ![图7.19 初代《超级马里奥兄弟》每个世界都包含微型英雄之旅：1)始于友好景观；2)进入与舒适隔绝的阴暗地底；3)重返地面接受环境考验；4)高潮战斗解救俘虏](media/media/image329.jpeg)
 
-> ![图7.20 贴图集与纹理能有效传达游戏环境的空间感。随着玩家推进英雄之旅，环境应从友好宜人逐渐变得严酷腐化](media/media/image330.jpeg)
+ 在设计类似模式时，可运用不同贴图集和颜色（漫反射）贴图创造所需环境效果。安全或温馨场所应采用自然或丰富材质：草地、木材、砖块、石材等赖特式材料。随着英雄推进任务，逐渐使用更冷硬或战损材质：粗凿巨石、机械、外星科技、铁器、岩浆、酸液等（图7.20）。现代游戏流行使用"脏旧"纹理——通过污损表现磨损的贴图。脏旧纹理适合展示曾经安全区域的腐蚀堕落，与整洁温馨的安全区形成对比。
 
-> 从许多方面来看，推进游戏叙事本身就是一种奖励。好故事虽不能使糟糕的游戏变优秀，但能让忍受糟糕游戏变得容易。本章最后我们将探讨如何用扩展叙事作为游戏内奖励，以及叙事奖励如何帮助调控关卡节奏。
+ ![图7.20 贴图集与纹理能有效传达游戏环境的空间感。随着玩家推进英雄之旅，环境应从友好宜人逐渐变得严酷腐化](media/media/image330.jpeg)
+
+ 从许多方面来看，推进游戏叙事本身就是一种奖励。好故事虽不能使糟糕的游戏变优秀，但能让忍受糟糕游戏变得容易。本章最后我们将探讨如何用扩展叙事作为游戏内奖励，以及叙事奖励如何帮助调控关卡节奏。
 
 ## 节奏把控与叙事奖励
 
-> 虽然本章及前文已多次讨论叙事空间，但鲜少提及叙事本身作为奖励的形式。我们曾将叙事舞台视为游戏中的奖励——那些发生故事事件且玩家可远观的地点。尽管已从探索角度分析过这类叙事空间的体验，但尚未从游戏节奏的视角进行审视。
+ 虽然本章及前文已多次讨论叙事空间，但鲜少提及叙事本身作为奖励的形式。我们曾将叙事舞台视为游戏中的奖励——那些发生故事事件且玩家可远观的地点。尽管已从探索角度分析过这类叙事空间的体验，但尚未从游戏节奏的视角进行审视。
 
-> ### 戏剧弧线作为节奏工具
+ ### 戏剧弧线作为节奏工具
 
-> 1863年，德国小说家兼剧作家古斯塔夫·弗莱塔格在《戏剧技巧》中提出五幕戏剧结构：*开端*、*上升动作*、*高潮*、*下降动作*和*结局*。这一结构形成了现今所称的*戏剧弧线*，常以弗莱塔格金字塔图示呈现（图7.21）。
+ 1863年，德国小说家兼剧作家古斯塔夫·弗莱塔格在《戏剧技巧》中提出五幕戏剧结构：*开端*、*上升动作*、*高潮*、*下降动作*和*结局*。这一结构形成了现今所称的*戏剧弧线*，常以弗莱塔格金字塔图示呈现（图7.21）。
 
-> ![图7.21 弗莱塔格金字塔展示戏剧弧线的各个阶段](media/media/image331.png)
+ ![图7.21 弗莱塔格金字塔展示戏剧弧线的各个阶段](media/media/image331.png)
 
-> 戏剧弧线是追踪虚构故事进展的有效工具。整个叙事可包含单一戏剧弧线，也可由多个弧线组成。以分为三部曲的《指环王》为例，《护戒使者》《双塔奇兵》和《王者归来》每部都有独立戏剧弧线。同样，每部书的章节也常遵循自身弧线。比如风云顶戒灵袭击桥段：开端交代角色到场原因，戒灵逼近形成上升动作，弗罗多被刺成为高潮，阿拉贡驱赶戒灵及后续则是下降动作与结局。
+ 戏剧弧线是追踪虚构故事进展的有效工具。整个叙事可包含单一戏剧弧线，也可由多个弧线组成。以分为三部曲的《指环王》为例，《护戒使者》《双塔奇兵》和《王者归来》每部都有独立戏剧弧线。同样，每部书的章节也常遵循自身弧线。比如风云顶戒灵袭击桥段：开端交代角色到场原因，戒灵逼近形成上升动作，弗罗多被刺成为高潮，阿拉贡驱赶戒灵及后续则是下降动作与结局。
 
-> 游戏同样运用戏剧弧线叙事。《大金刚》通过四个关卡构建完整弧线：开端展示宝琳被绑架的过场；上升动作是马里奥（当时叫Jumpman）攀爬愈发复杂的摩天楼；高潮出现在第四关——马里奥拆除固定平台的铆钉；下降动作与结局则是大金刚坠落与有情人团聚。
+ 游戏同样运用戏剧弧线叙事。《大金刚》通过四个关卡构建完整弧线：开端展示宝琳被绑架的过场；上升动作是马里奥（当时叫Jumpman）攀爬愈发复杂的摩天楼；高潮出现在第四关——马里奥拆除固定平台的铆钉；下降动作与结局则是大金刚坠落与有情人团聚。
 
-> 多数游戏空间将动作编排为地理分区：世界、领地等具有共同主题元素的区域。《超级马里奥兄弟》通常设置八个世界，每个包含若干子关卡和终点城堡；开放世界的《蝙蝠侠：阿卡姆之城》则为反派集团划分特色领地（冰原、植物园、马戏团等）。这些分区都遵循戏剧弧线：马里奥需通过渐难关卡摧毁每个世界的库帕堡垒；蝙蝠侠则要在各反派巢穴完成特定任务，最终迎来高潮对决。
+ 多数游戏空间将动作编排为地理分区：世界、领地等具有共同主题元素的区域。《超级马里奥兄弟》通常设置八个世界，每个包含若干子关卡和终点城堡；开放世界的《蝙蝠侠：阿卡姆之城》则为反派集团划分特色领地（冰原、植物园、马戏团等）。这些分区都遵循戏剧弧线：马里奥需通过渐难关卡摧毁每个世界的库帕堡垒；蝙蝠侠则要在各反派巢穴完成特定任务，最终迎来高潮对决。
 
-> ### 以嵌入式叙事奖励探索
+ ### 以嵌入式叙事奖励探索
 
-> 这类逐级递进的戏剧弧线让玩家流畅推进游戏。如第二章所述，保持高低动作对比对节奏把控至关重要。通过"进入关卡→克服障碍→战胜强敌→达成目标→胜利凯旋"的弧线结构，玩家能获得强烈成就感。
+ 这类逐级递进的戏剧弧线让玩家流畅推进游戏。如第二章所述，保持高低动作对比对节奏把控至关重要。通过"进入关卡→克服障碍→战胜强敌→达成目标→胜利凯旋"的弧线结构，玩家能获得强烈成就感。
 
-> 下降动作与结局对游戏设计师尤为关键，它们既是玩家调整呼吸的缓冲带，也是发放奖励的理想节点：戏剧性逃脱、资源补给或关键道具。在弧线尾声交付嵌入式叙事——无论是环境叙事、脚本事件还是过场动画——都能强化玩家的进度推进感。
+ 下降动作与结局对游戏设计师尤为关键，它们既是玩家调整呼吸的缓冲带，也是发放奖励的理想节点：戏剧性逃脱、资源补给或关键道具。在弧线尾声交付嵌入式叙事——无论是环境叙事、脚本事件还是过场动画——都能强化玩家的进度推进感。
 
-> 这种节奏设计还将叙事结构与长短线目标相连：每个短线目标 quest 都构成独立而饱满的微型戏剧弧线，最终串联成宏观的长线叙事结构。
+ 这种节奏设计还将叙事结构与长短线目标相连：每个短线目标 quest 都构成独立而饱满的微型戏剧弧线，最终串联成宏观的长线叙事结构。
 
-> ### 以可选叙事与彩蛋奖励探索
+ ### 以可选叙事与彩蛋奖励探索
 
-> 虽然戏剧弧线能指导关卡构建与剧情推进式奖励，但为自主探索的玩家提供可选叙事同样重要。这类叙事既激励玩家测试空间边界，又赋予其获取特权信息的满足感。它们可作为关卡中的荣耀奖励，其发现能深化玩家与游戏空间的互动。
+ 虽然戏剧弧线能指导关卡构建与剧情推进式奖励，但为自主探索的玩家提供可选叙事同样重要。这类叙事既激励玩家测试空间边界，又赋予其获取特权信息的满足感。它们可作为关卡中的荣耀奖励，其发现能深化玩家与游戏空间的互动。
 
-> 这类叙事的实现常取决于开发资源体量。例如《塞尔达传说：魔吉拉的假面》在标准地牢攻略主线外，设置了收集面具的支线任务（多涉及帮助NPC）。这些支线拥有独立嵌入式叙事，如重聚苦命鸳鸯的剧情，每项任务都配备专属角色、文本、资产和动画，完成度远超常规支线。
+ 这类叙事的实现常取决于开发资源体量。例如《塞尔达传说：魔吉拉的假面》在标准地牢攻略主线外，设置了收集面具的支线任务（多涉及帮助NPC）。这些支线拥有独立嵌入式叙事，如重聚苦命鸳鸯的剧情，每项任务都配备专属角色、文本、资产和动画，完成度远超常规支线。
 
-> 对小团队而言，可采用更简约的叙事方案。《传送门》中"鼠人"藏身处本质是可选内容——不影响主线进程与剧情理解，但V社将其巧妙布置在玩家易发现的区域。这些仅由特殊纹理构成的叙事元件，任何规模团队都能快速实现。
+ 对小团队而言，可采用更简约的叙事方案。《传送门》中"鼠人"藏身处本质是可选内容——不影响主线进程与剧情理解，但V社将其巧妙布置在玩家易发现的区域。这些仅由特殊纹理构成的叙事元件，任何规模团队都能快速实现。
 
-> 《半衰期2》则设计了更难发现的"全知弗地冈人"：在早期关卡放射性隧道中，玩家可遇见这位烤猎头蟹并预言剧情的角色。其实现仅需复用基础资产（弗地冈人模型、猎头蟹、火焰粒子）加上新配音。
+ 《半衰期2》则设计了更难发现的"全知弗地冈人"：在早期关卡放射性隧道中，玩家可遇见这位烤猎头蟹并预言剧情的角色。其实现仅需复用基础资产（弗地冈人模型、猎头蟹、火焰粒子）加上新配音。
 
-> 这些都属于"彩蛋"范畴——隐藏于作品中的玩笑、信息或奖励。彩蛋概念由雅达利员工在1979年提出，源自程序员Warren Robinett反抗匿名政策，在《冒险》中暗藏署名房间的壮举。玩家通过高风险探索或复杂解谜发现彩蛋的过程，本身就会形成值得夸耀的涌现叙事。在关卡中巧妙布置这类叙事组件，能大幅提升游戏空间的内外互动乐趣。
->
-> ## 本章总结
+ 这些都属于"彩蛋"范畴——隐藏于作品中的玩笑、信息或奖励。彩蛋概念由雅达利员工在1979年提出，源自程序员Warren Robinett反抗匿名政策，在《冒险》中暗藏署名房间的壮举。玩家通过高风险探索或复杂解谜发现彩蛋的过程，本身就会形成值得夸耀的涌现叙事。在关卡中巧妙布置这类叙事组件，能大幅提升游戏空间的内外互动乐趣。
 
-> 在本章中，我们从意义与叙事这一全新视角重新审视了关卡设计。我们认识到设计不仅是机械性提示的产物，更是故事的载体。通过分析数字与实体建筑空间，我们发现二者都能借助建筑语汇、场景构建和美术资产来讲述故事，同时也观察到设计空间会随着用户交互而动态演变——无论是功能转变还是出人意料的互动方式。
+ ## 本章总结
 
-> 在关卡构建方面，我们探讨了如何通过环境美术与预制游戏资产的排布来构建叙事，以及游戏镜头的定位如何成为传递叙事的有效媒介。环境美术能够标识玩家在游戏叙事中的进程，比如遵循约瑟夫·坎贝尔"英雄之旅"模式的叙事发展。最后，我们研究了如何将弗莱塔格金字塔等故事结构作为节奏调控机制，以及如何将叙事转化为该机制下的目标与奖励——既服务于必要游戏行为，也激励玩家探索游戏世界的边界。
+ 在本章中，我们从意义与叙事这一全新视角重新审视了关卡设计。我们认识到设计不仅是机械性提示的产物，更是故事的载体。通过分析数字与实体建筑空间，我们发现二者都能借助建筑语汇、场景构建和美术资产来讲述故事，同时也观察到设计空间会随着用户交互而动态演变——无论是功能转变还是出人意料的互动方式。
 
-> 在第八章，我们将继续探索玩家测试游戏世界边界的行为，以及明确传达这些边界如何帮助构建更具可能性的游戏领域。
->
+ 在关卡构建方面，我们探讨了如何通过环境美术与预制游戏资产的排布来构建叙事，以及游戏镜头的定位如何成为传递叙事的有效媒介。环境美术能够标识玩家在游戏叙事中的进程，比如遵循约瑟夫·坎贝尔"英雄之旅"模式的叙事发展。最后，我们研究了如何将弗莱塔格金字塔等故事结构作为节奏调控机制，以及如何将叙事转化为该机制下的目标与奖励——既服务于必要游戏行为，也激励玩家探索游戏世界的边界。
+
+ 在第八章，我们将继续探索玩家测试游戏世界边界的行为，以及明确传达这些边界如何帮助构建更具可能性的游戏领域。
+
 ## 参考文献注释
 
 1.  Koch, Ebba, and Richard André Barraud. *泰姬陵全纪录：阿格拉河岸花园*. 伦敦: Thames & Hudson出版社, 2006年.
@@ -252,7 +252,7 @@
 5.  Murray, H.J.R. *国际象棋史*. 牛津: Clarendon出版社, 1962年.
 
 6.  Wiggins, David K. 1820-1860年间南方种植园社区奴隶儿童的游戏. *体育史期刊* 第7卷第2期 (1980年): 21-39页.
-    <http://library.la84.org/SportsLibrary/JSH/JSH1980/JSH0702/jsh0702c.pdf>
+    <http://library.la84.org/SportsLibrary/JSH/JSH1980/JSH0702/jsh0702c.pdf
     (2013年7月1日访问).
 
 7.  Tolkien, J.R.R. *指环王*. 第2版. 波士顿: Houghton Mifflin出版社, 1967年.
@@ -300,9 +300,9 @@
 
 24. 《制作幕后：刺客信条》. 《Edge》杂志. http://www.edge-online.com/features/the-making-of-assassins-creed/ (2013年7月2日访问).
 
-25. Jenkins, Henry. 作为叙事架构的游戏设计. 麻省理工学院. <http://web.mit.edu/cms/People/>henry3/games&narrative.html (2013年7月2日访问).
+25. Jenkins, Henry. 作为叙事架构的游戏设计. 麻省理工学院. <http://web.mit.edu/cms/People/henry3/games&narrative.html (2013年7月2日访问).
 
-26. Jenkins, Henry. 作为叙事架构的游戏设计. 麻省理工学院. <http://web.mit.edu/cms/People/>henry3/games&narrative.html (2013年7月2日访问).
+26. Jenkins, Henry. 作为叙事架构的游戏设计. 麻省理工学院. <http://web.mit.edu/cms/People/henry3/games&narrative.html (2013年7月2日访问).
 
 27. 《回到未来》. DVD. 导演Robert Zemeckis. 环球城: 环球影业家庭娱乐, 1985年.
 
